--- a/01. Partie législative/Article L1126-1 - 6361156.md
+++ b/01. Partie législative/Article L1126-1 - 6361156.md
@@ -15,7 +15,17 @@ n'ont fait l'objet de la part des ayants droit d'aucune opération ou réclamati
 
 4° Les dépôts de titres et, d'une manière générale, tous avoirs en titres dans les banques et autres établissements qui
 reçoivent des titres en dépôt ou pour tout autre cause lorsque ces dépôts ou avoirs n'ont fait l'objet, de la part des ayants
-droit, d'aucune opération ou réclamation depuis trente années.
+droit, d'aucune opération ou réclamation depuis trente années ;
+
+5° Les sommes dues au titre de contrats d'assurance sur la vie comportant des valeurs de rachat ou de transfert et n'ayant
+fait l'objet, à compter du décès de l'assuré ou du terme du contrat, d'aucune demande de prestation auprès de l'organisme
+d'assurance depuis trente années.
+
+**Nota:**
+
+Loi 2006-1640 du 21 décembre 2006 art. 18 V : Les dispositions du présent article s'appliquent aux contrats d'assurance sur
+la vie en cours comportant des valeurs de rachat ou de transfert et n'ayant fait l'objet, à compter du décès de l'assuré ou
+du terme du contrat, d'aucune demande de prestation à la date de publication de la présente loi.
 
 **Liens relatifs à cet article**
 
@@ -36,6 +46,10 @@ _Cité par_:
 _Codifié par_:
 
   - Ordonnance 2006-460 2006-04-21 JORF 22 avril 2006
+
+_Modifié par_:
+
+  - Loi n°2006-1640 du 21 décembre 2006 - art. 18 (V) JORF 22 décembre 2006
 
 _Anciens textes_:
 
