--- a/01. Partie législative/Article L2131-3 - 6361284.md
+++ b/01. Partie législative/Article L2131-3 - 6361284.md
@@ -1,8 +1,8 @@
 # Article L2131-3
 
-Lorsque l'exercice de la pêche et les nécessités d'entretien du cours d'eau le permettent, la distance de 3,25 mètres
-mentionnée à l'article L. 2131-2 pour la servitude de marchepied peut être exceptionnellement réduite sur décision de
-l'autorité gestionnaire dans les limites fixées à l'article L. 435-9 du code de l'environnement.
+Lorsque l'exercice de la pêche, le passage des piétons et les nécessités d'entretien et de surveillance du cours d'eau ou du
+lac le permettent, la distance de 3,25 mètres mentionnée à l'article L. 2131-2 pour la servitude de marchepied peut être
+exceptionnellement réduite, sur décision de l'autorité gestionnaire, jusqu'à 1,50 mètre. 
 
 Lorsque l'intérêt du service de la navigation le permet, les distances de 7,80 mètres et de 9,75 mètres mentionnées à
 l'article L. 2131-2, pour la servitude de halage, peuvent être réduites sur décision de l'autorité gestionnaire.
@@ -13,12 +13,14 @@ _Codifié par_:
 
   - Ordonnance 2006-460 2006-04-21 JORF 22 avril 2006
 
+_Modifié par_:
+
+  - Loi n°2006-1772 du 30 décembre 2006 - art. 2 () JORF 31 décembre 2006
+
 _Anciens textes_:
 
   - Code du domaine public fluvial et de la navigation - art. 16 (Ab)
-  - Code du domaine public fluvial et de la navigation intérieure art. 16
 
 _Cite_:
 
-  - Code général de la propriété des personnes publiqu - art. L2131-2 (M)
-  - Code de l'environnement - art. L435-9 (M)
+  - Code général de la propriété des personnes publ... - art. L2131-2 (V)
