--- a/01. Partie législative/Article L2323-2 - 6361377.md
+++ b/01. Partie législative/Article L2323-2 - 6361377.md
@@ -1,19 +1,18 @@
 # Article L2323-2
 
-A défaut de paiement des sommes mentionnées sur l'avis de mise en recouvrement ou de réclamation assortie d'une demande de
-sursis de paiement avec constitution de garanties dans les conditions fixées par l'article L. 2323-11, le comptable chargé du
-recouvrement met en oeuvre les dispositions fixées par l'article L. 257 du livre des procédures fiscales.
+A défaut de paiement des sommes mentionnées sur le titre de perception ou de la mise en jeu de l'article L. 2323-11, le
+comptable public compétent adresse au redevable une lettre de rappel avant la notification du premier acte de poursuite
+devant donner lieu à des frais.
 
 **Liens relatifs à cet article**
-
-_Cite_:
-
-  - CGI Livre des procédures fiscales L257
-  - Code général de la propriété des personnes publiqu - art. L2323-11 (M)
 
 _Codifié par_:
 
   - Ordonnance 2006-460 2006-04-21 JORF 22 avril 2006
+
+_Modifié par_:
+
+  - Loi n°2006-1771 du 30 décembre 2006 - art. 115 (V) JORF 31 décembre 2006
 
 _Cité par_:
 
@@ -25,3 +24,7 @@ _Anciens textes_:
 
   - Code du domaine de l'Etat L81 al. 1
   - Code du domaine de l'Etat - art. L81 (Ab)
+
+_Cite_:
+
+  - Code général de la propriété des personnes publiqu - art. L2323-11 (M)
