--- a/01. Partie législative/Article L2322-1 - 6361369.md
+++ b/01. Partie législative/Article L2322-1 - 6361369.md
@@ -1,18 +1,22 @@
 # Article L2322-1
 
 La liquidation des produits et redevances du domaine de l'Etat et des sommes de toute nature mentionnés à l'article L. 2321-1
-est soumise aux dispositions des articles 1724 et 1724 A du code général des impôts.
+est soumise aux dispositions de l'article 1724 du code général des impôts.
 
 **Liens relatifs à cet article**
-
-_Cite_:
-
-  - CGI 1724, 1724 A
-  - Code général de la propriété des personnes publiqu - art. L2321-1 (V)
 
 _Codifié par_:
 
   - Ordonnance 2006-460 2006-04-21 JORF 22 avril 2006
+
+_Modifié par_:
+
+  - Loi n°2006-1771 du 30 décembre 2006 - art. 115 (V) JORF 31 décembre 2006 en vigueur le 1er janvier 2007
+
+_Cite_:
+
+  - Code général des impôts, CGI. - art. 1724 (V)
+  - Code général de la propriété des personnes publ... - art. L2321-1 (V)
 
 _Anciens textes_:
 
