--- a/01. Partie législative/Article L2323-4 - 6361380.md
+++ b/01. Partie législative/Article L2323-4 - 6361380.md
@@ -1,15 +1,26 @@
 # Article L2323-4
 
-Si, pour les produits, redevances et sommes de toute nature mentionnés à l'article L. 2321-1, la mise en demeure n'a pas été
-suivie de paiement ou de la mise en jeu des dispositions de l'article L. 2323-11, le comptable public compétent peut, à
-l'expiration d'un délai de vingt jours suivant cette formalité, engager des poursuites, dans les conditions fixées par les
-articles L. 258 et L. 261 du livre des procédures fiscales.
+Si, pour les produits, redevances et sommes de toute nature mentionnés à l'article L. 2321-1, la lettre de rappel n'a pas été
+suivie du paiement de la somme due ou de la mise en jeu de l'article L. 2323-11, le comptable public compétent peut, à
+l'expiration d'un délai de vingt jours suivant l'une ou l'autre de ces formalités, engager des poursuites dans les conditions
+fixées par les articles L. 258 et L. 259 du livre des procédures fiscales.
 
 **Liens relatifs à cet article**
 
 _Codifié par_:
 
   - Ordonnance 2006-460 2006-04-21 JORF 22 avril 2006
+
+_Modifié par_:
+
+  - Loi n°2006-1771 du 30 décembre 2006 - art. 115 (V) JORF 31 décembre 2006 en vigueur le 1er janvier 2007
+
+_Cite_:
+
+  - Livre des procédures fiscales - art. L258 (VT)
+  - Livre des procédures fiscales - art. L259 (VT)
+  - Code général de la propriété des personnes publ... - art. L2321-1 (V)
+  - Code général de la propriété des personnes publ... - art. L2323-11 (V)
 
 _Anciens textes_:
 
@@ -21,8 +32,3 @@ _Cité par_:
   - Code de la défense. - art. R2234-53 (V)
   - Code général de la propriété des personnes publ... - art. L2323-7 (V)
   - Code minier (nouveau) - art. L132-15-1 (V)
-
-_Cite_:
-
-  - Code général de la propriété des personnes publiqu - art. L2321-1 (V)
-  - Code général de la propriété des personnes publiqu - art. L2323-11 (M)
