--- a/01. Partie législative/Article L2321-4 - 6361367.md
+++ b/01. Partie législative/Article L2321-4 - 6361367.md
@@ -1,19 +1,23 @@
 # Article L2321-4
 
-Les produits et redevances du domaine public ou privé d'une personne publique mentionnée à l'article L. 1 sont soumis, quel
-que soit leur mode de fixation, à la prescription quinquennale édictée par l'article 2277 du code civil.
+Les produits et redevances du domaine public ou privé d'une personne publique mentionnée à l'article L. 1 se prescrivent par
+cinq ans, quel que soit leur mode de fixation. 
 
 Cette prescription commence à courir à compter de la date à laquelle les produits et redevances sont devenus exigibles.
 
 **Liens relatifs à cet article**
 
-_Codifié par_:
+_Modifié par_:
 
-  - Ordonnance 2006-460 2006-04-21 JORF 22 avril 2006
+  - Loi n°2008-561 du 17 juin 2008 - art. 21
 
 _Anciens textes_:
 
   - Code du domaine de l'Etat - art. L48 (Ab)
+
+_Cite_:
+
+  - Code général de la propriété des personnes publiques. - art. L1
 
 _Cité par_:
 
