--- a/01. Partie législative/Article L1126-3 - 6361159.md
+++ b/01. Partie législative/Article L1126-3 - 6361159.md
@@ -1,20 +1,15 @@
 # Article L1126-3
 
 Les banques, les établissements de crédit et tous autres établissements qui reçoivent soit des fonds en dépôt ou en compte
-courant, soit des titres en dépôt ou pour tout autre cause sont tenus de remettre à l'administration des impôts tous les
-dépôts ou avoirs en espèces ou en titres, qui n'ont fait l'objet, de la part des ayants droit, d'aucune opération ou
-réclamation depuis trente ans et qui n'ont pas été déposés dans un établissement habilité à cet effet par décret.
+courant, soit des titres en dépôt ou pour tout autre cause sont tenus de remettre     au Trésor public tous les dépôts ou
+avoirs en espèces ou en titres, qui n'ont fait l'objet, de la part des ayants droit, d'aucune opération ou réclamation depuis
+trente ans et qui n'ont pas été déposés dans un établissement habilité à cet effet par décret.
 
 **Liens relatifs à cet article**
 
-_Codifié par_:
+_Modifié par_:
 
-  - Ordonnance 2006-460 2006-04-21 JORF 22 avril 2006
-
-_Anciens textes_:
-
-  - Code du domaine de l'Etat - art. R47 (M)
-  - Code du domaine de l'Etat R47, alinéa 1
+  - Loi n°2009-526 du 12 mai 2009 - art. 121
 
 _Cité par_:
 
