--- a/01. Partie législative/Article L3212-2 - 6361449.md
+++ b/01. Partie législative/Article L3212-2 - 6361449.md
@@ -22,13 +22,17 @@ remis, dans le cadre d'une convention de coopération, à un organisme assurant 
 
 5° Les cessions des matériels informatiques et des logiciels nécessaires à leur utilisation, dont les services de l'Etat ou
 de l'un de ses établissements publics n'ont plus l'emploi et dont la valeur unitaire n'excède pas un plafond fixé par décret,
-aux personnels des administrations concernées.
+aux personnels des administrations concernées ; 
+
+6° Les cessions de biens meubles, dont le ministère de la défense n'a plus l'emploi, à des associations ou organismes
+agissant pour la préservation ou la mise en valeur du patrimoine militaire, ou contribuant au renforcement du lien entre la
+Nation et son armée.
 
 **Liens relatifs à cet article**
 
 _Modifié par_:
 
-  - Loi n°2009-526 du 12 mai 2009 - art. 121
+  - Loi n°2009-928 du 29 juillet 2009 - art. 17
 
 _Cité par_:
 
@@ -44,10 +48,8 @@ _Cité par_:
 
 _Cite_:
 
-  - CGI 238 bis
-  - Code général des impôts, CGI. - art. 238 bis (V)
-  - Code général de la propriété des personnes publ... - art. L3211-18 (V)
-  - Loi n°1901-07-01
+  - Code général des impôts, CGI. - art. 238 bis
+  - Code général de la propriété des personnes publiques. - art. L3211-18
 
 _Anciens textes_:
 
