--- a/01. Partie législative/Article L2323-8 - 6361388.md
+++ b/01. Partie législative/Article L2323-8 - 6361388.md
@@ -1,18 +1,14 @@
 # Article L2323-8
 
-Les comptables du Trésor chargés de recouvrer les produits, redevances et sommes de toute nature, mentionnés à l'article L.
+Les comptables publics chargés de recouvrer les produits, redevances et sommes de toute nature, mentionnés à l'article L.
 2321-1, qui n'ont diligenté aucune poursuite contre un débiteur retardataire pendant quatre années consécutives à partir du
 jour de l'émission du titre de perception mentionné à l'article L. 2323-1, perdent leur recours et sont déchus de tout droit
-et de toute action contre ce débiteur.
+et de toute action contre ce débiteur. 
 
 Le délai de quatre ans mentionné au premier alinéa est interrompu par tous actes comportant reconnaissance de la part du
 débiteur ou par tous actes interruptifs de prescription.
 
 **Liens relatifs à cet article**
-
-_Codifié par_:
-
-  - Ordonnance 2006-460 2006-04-21 JORF 22 avril 2006
 
 _Cité par_:
 
@@ -21,7 +17,7 @@ _Cité par_:
 
 _Modifié par_:
 
-  - Loi n°2006-1771 du 30 décembre 2006 - art. 115 (V) JORF 31 décembre 2006 en vigueur le 1er janvier 2007
+  - Ordonnance n°2010-420  du 27 avril 2010 - art. 110
 
 _Anciens textes_:
 
@@ -29,5 +25,5 @@ _Anciens textes_:
 
 _Cite_:
 
-  - Code général de la propriété des personnes publiqu - art. L2321-1 (V)
-  - Code général de la propriété des personnes publiqu - art. L2323-1 (M)
+  - Code général de la propriété des personnes publ... - art. L2321-1 (V)
+  - Code général de la propriété des personnes publ... - art. L2323-1 (V)
