--- a/01. Partie législative/Article L2222-23 - 6361358.md
+++ b/01. Partie législative/Article L2222-23 - 6361358.md
@@ -1,25 +1,23 @@
 # Article L2222-23
 
-Les dispositions du chapitre V et de la section 3 du chapitre VIII du titre II du livre Ier du code rural sont applicables
-aux terres incultes ou manifestement sous-exploitées attribuées à une commune ou à l'Etat en application du dernier alinéa de
-l'article L. 1123-3, conformément aux dispositions des articles L. 125-13 et L. 128-3 du même code.
+Les dispositions du chapitre V et de la section 3 du chapitre VIII du titre II du livre Ier du code rural et de la pêche
+maritime sont applicables aux terres incultes ou manifestement sous-exploitées attribuées à une commune ou à l'Etat en
+application du dernier alinéa de l'article L. 1123-3, conformément aux dispositions des articles L. 125-13 et L. 128-3 du
+même code.
 
 **Liens relatifs à cet article**
+
+_Modifié par_:
+
+  - Ordonnance n°2010-462 du 6 mai 2010 - art. 1
+
+_Cite_:
+
+  - Code général de la propriété des personnes publ... - art. L1123-3 (V)
+  - Code rural - art. L125-13 (V)
+  - Code rural - art. L128-3 (T)
 
 _Cité par_:
 
   - Code général de la propriété des personnes publ... - art. L5163-14 (V)
   - Code général de la propriété des personnes publ... - art. L5211-1 (V)
-
-_Cite_:
-
-  - Code général de la propriété des personnes publiqu - art. L1123-3 (V)
-  - Code rural L125-13, L128-3
-
-_Anciens textes_:
-
-  - Code rural L125-3, L128-3
-
-_Codifié par_:
-
-  - Ordonnance 2006-460 2006-04-21 JORF 22 avril 2006
