--- a/01. Partie législative/Article L2222-5 - 6361336.md
+++ b/01. Partie législative/Article L2222-5 - 6361336.md
@@ -2,13 +2,14 @@
 
 Les conditions dans lesquelles sont soumis au statut du fermage et du métayage les baux du domaine de l'Etat, des
 collectivités territoriales, de leurs groupements ainsi que des établissements publics, qui portent sur des biens ruraux
-constituant ou non une exploitation agricole complète, sont régies par les dispositions de l'article L. 415-11 du code rural.
+constituant ou non une exploitation agricole complète, sont régies par les dispositions de l'article L. 415-11 du code rural
+et de la pêche maritime.
 
 **Liens relatifs à cet article**
 
-_Codifié par_:
+_Modifié par_:
 
-  - Ordonnance 2006-460 2006-04-21 JORF 22 avril 2006
+  - Ordonnance n°2010-462 du 6 mai 2010 - art. 1
 
 _Cité par_:
 
@@ -18,4 +19,4 @@ _Cité par_:
 
 _Cite_:
 
-  - Code rural L415-11
+  - Code rural - art. L415-11 (V)
