--- a/01. Partie législative/Article L2111-5 - 6361182.md
+++ b/01. Partie législative/Article L2111-5 - 6361182.md
@@ -1,20 +1,27 @@
 # Article L2111-5
 
 Les limites du rivage sont constatées par l'Etat en fonction des observations opérées sur les lieux à délimiter ou des
-informations fournies par des procédés scientifiques.
+informations fournies par des procédés scientifiques. 
 
-Le projet de délimitation du rivage est soumis à enquête publique.
+Le projet de délimitation du rivage est soumis à enquête publique réalisée conformément au chapitre III du titre II du livre
+Ier du code de l'environnement. 
 
 L'acte administratif portant délimitation du rivage est publié et notifié aux riverains. Les revendications de propriété sur
 les portions de rivage ainsi délimitées se prescrivent par dix ans à dater de la publication. Le recours contentieux à
-l'encontre de l'acte de délimitation suspend ce délai.
+l'encontre de l'acte de délimitation suspend ce délai. 
 
 Un décret en Conseil d'Etat détermine les conditions d'application du présent article, notamment les formalités propres à
 mettre les riverains en mesure de formuler leurs observations, ainsi que la liste des procédés scientifiques visés au premier
-alinéa du présent article.
+alinéa du présent article. 
 
 Ce décret détermine également les conditions dans lesquelles sont fixées la limite transversale de la mer à l'embouchure des
 cours d'eau et la limite des lais et relais de la mer.
+
+**Nota:**
+
+Ces dispositions s'appliquent aux projets, plans, programmes ou autres documents de planification pour lesquels l'arrêté
+d'ouverture et d'organisation de l'enquête publique est publié à compter du premier jour du sixième mois après la publication
+du décret en Conseil d'Etat prévu à l'article L. 123-19 du code de l'environnement.
 
 **Liens relatifs à cet article**
 
@@ -22,10 +29,14 @@ _Anciens textes_:
 
   - Loi n°86-2 du 3 janvier 1986 - art. 26 (Ab)
 
-_Codifié par_:
+_Modifié par_:
 
-  - Ordonnance 2006-460 2006-04-21 JORF 22 avril 2006
+  - Loi n°2010-788 du 12 juillet 2010 - art. 240
 
 _Cité par_:
 
   - Code général de la propriété des personnes publ... - art. L5161-1 (V)
+
+_Cite_:
+
+  - Code de l'environnement -  Chapitre III : Participation du public aux déci... (V)
