--- a/01. Partie législative/Article L2132-11 - 6361302.md
+++ b/01. Partie législative/Article L2132-11 - 6361302.md
@@ -1,10 +1,10 @@
 # Article L2132-11
 
 Les atteintes à l'intégrité ou à l'utilisation du domaine public fluvial des ports maritimes sont définies au titre III du
-livre III du code des ports maritimes.
+livre III de la cinquième partie du code des transports.
 
 **Liens relatifs à cet article**
 
-_Codifié par_:
+_Modifié par_:
 
-  - Ordonnance 2006-460 2006-04-21 JORF 22 avril 2006
+  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 3 (V)
