--- a/01. Partie législative/Article L2132-22 - 6361314.md
+++ b/01. Partie législative/Article L2132-22 - 6361314.md
@@ -1,10 +1,10 @@
 # Article L2132-22
 
 La répression des atteintes au domaine public des ports maritimes est opérée dans les conditions fixées par les dispositions
-du titre III du livre III du code des ports maritimes.
+au titre III du livre III de la cinquième partie du code des transports.
 
 **Liens relatifs à cet article**
 
-_Codifié par_:
+_Modifié par_:
 
-  - Ordonnance 2006-460 2006-04-21 JORF 22 avril 2006
+  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 3 (V)
