--- a/01. Partie législative/Article L2323-2 - 6361377.md
+++ b/01. Partie législative/Article L2323-2 - 6361377.md
@@ -1,18 +1,19 @@
 # Article L2323-2
 
-A défaut de paiement des sommes mentionnées sur le titre de perception ou de la mise en jeu de l'article L. 2323-11, le
-comptable public compétent adresse au redevable une lettre de rappel avant la notification du premier acte de poursuite
-devant donner lieu à des frais.
+A défaut de paiement des produits, redevances et sommes de toute nature visés à l'article L. 2321-1 mentionnés sur le titre
+de perception ou de la mise en jeu de l'article L. 2323-11, le comptable public compétent adresse au redevable une mise en
+demeure de payer avant la notification du premier acte de poursuite devant donner lieu à des frais au sens de l'article 1912
+du code général des impôts.
 
 **Liens relatifs à cet article**
 
 _Codifié par_:
 
-  - Ordonnance 2006-460 2006-04-21 JORF 22 avril 2006
+  - Ordonnance n°2006-460 du 21 avril 2006
 
 _Modifié par_:
 
-  - Loi n°2006-1771 du 30 décembre 2006 - art. 115 (V) JORF 31 décembre 2006
+  - Loi n°2010-1658 du 29 décembre 2010 - art. 55 (M)
 
 _Cité par_:
 
@@ -20,11 +21,12 @@ _Cité par_:
   - Code des procédures civiles d'exécution - art. R221-7 (V)
   - Code général de la propriété des personnes publ... - art. L2323-4 (VD)
 
-_Anciens textes_:
-
-  - Code du domaine de l'Etat L81 al. 1
-  - Code du domaine de l'Etat - art. L81 (Ab)
-
 _Cite_:
 
-  - Code général de la propriété des personnes publiqu - art. L2323-11 (M)
+  - Code général des impôts, CGI. - art. 1912 (VT)
+  - Code général de la propriété des personnes publ... - art. L2321-1 (V)
+  - Code général de la propriété des personnes publ... - art. L2323-11 (V)
+
+_Anciens textes_:
+
+  - Code du domaine de l'Etat - art. L81 (Ab)
