--- a/01. Partie législative/Article L2124-27 - 6361264.md
+++ b/01. Partie législative/Article L2124-27 - 6361264.md
@@ -1,19 +1,19 @@
 # Article L2124-27
 
-L'autorisation domaniale nécessaire pour la recherche et l'exploitation des substances minérales non visées à l'article 2 du
-code minier et contenues dans les fonds marins appartenant au domaine public est délivrée en application des règles fixées à
-l'article 1er de la loi n° 76-646 du 16 juillet 1976.
+L'autorisation domaniale nécessaire pour la recherche et l'exploitation des substances minérales autres que celles
+mentionnées à l'article L. 111-1 du code minier lorsqu'elles sont contenues dans les fonds marins du domaine public est
+délivrée en application des règles fixées à la section 1 du chapitre III du titre II et à la section 1 du chapitre II du
+titre III du livre 1er du code minier.
 
 **Liens relatifs à cet article**
 
-_Cite_:
-
-  - Loi n°76-646 du 16 juillet 1976 - art. 1 (V)
-  - Code minier 2
-
 _Codifié par_:
 
-  - Ordonnance 2006-460 2006-04-21 JORF 22 avril 2006
+  - Ordonnance n°2006-460 du 21 avril 2006
+
+_Modifié par_:
+
+  - Ordonnance n°2011-91 du 20 janvier 2011 - art. 7
 
 _Cité par_:
 
@@ -22,3 +22,7 @@ _Cité par_:
   - Code général de la propriété des personnes publ... - art. L5163-4 (V)
   - Code général de la propriété des personnes publ... - art. L5211-1 (V)
   - Code général de la propriété des personnes publ... - art. L5411-1 (V)
+
+_Cite_:
+
+  - Code minier (nouveau) - art. L111-1 (V)
