--- a/01. Partie législative/Article L2124-28 - 6361265.md
+++ b/01. Partie législative/Article L2124-28 - 6361265.md
@@ -1,21 +1,25 @@
 # Article L2124-28
 
 Le titulaire de l'autorisation de prospections préalables ou du titre de recherche et d'exploitation est, en cas de retrait
-ou de réduction de l'assiette de l'autorisation domaniale mentionnée à l'article L. 2124-27, soumis aux règles fixées par
-l'article 2 de la loi n° 76-646 du 16 juillet 1976.
+ou de réduction de l'assiette de l'autorisation domaniale mentionnée à l'article L. 2124-27, soumis aux obligations fixées
+par l'article L. 123-3 du code minier.
 
 **Liens relatifs à cet article**
 
-_Cite_:
-
-  - Loi n°76-646 du 16 juillet 1976 - art. 2 (V)
-  - Code général de la propriété des personnes publiqu - art. L2124-27 (V)
-
 _Codifié par_:
 
-  - Ordonnance 2006-460 2006-04-21 JORF 22 avril 2006
+  - Ordonnance n°2006-460 du 21 avril 2006
+
+_Modifié par_:
+
+  - Ordonnance n°2011-91 du 20 janvier 2011 - art. 7
 
 _Cité par_:
 
   - Code général de la propriété des personnes publ... - art. L5163-5 (V)
   - Code général de la propriété des personnes publ... - art. L5211-1 (V)
+
+_Cite_:
+
+  - Code général de la propriété des personnes publiques. - art. L2124-27
+  - Code minier (nouveau) - art. L123-3 (V)
