--- a/02. Partie réglementaire/Article R3211-6 - 24885643.md
+++ b/02. Partie réglementaire/Article R3211-6 - 24885643.md
@@ -6,19 +6,23 @@ directeur départemental des finances publiques.
 Lorsque la valeur vénale de l'immeuble excède un montant fixé par arrêté du ministre chargé du domaine, la cession est
 autorisée par le ministre chargé du domaine.
 
+Préalablement à l'autorisation mentionnée à l'alinéa précédent, la commission pour la transparence et la qualité des
+opérations immobilières de l'Etat émet un avis sur le projet de cession lorsque ce dernier prévoit une cession dans les
+conditions mentionnées à l'article R. 3211-7. L'avis porte sur le respect des règles figurant à l'article R. 3211-7 et sur la
+qualité des procédures envisagées. A cette fin, le directeur général des finances publiques adresse à la commission le
+dossier du projet, accompagné d'un rapport de présentation. Cette procédure ne s'applique pas en cas d'exercice du droit de
+priorité prévue à l'article L. 240-1 du code de l'urbanisme. La commission émet son avis dans le délai d'un mois à compter de
+la réception du dossier. Ce délai peut être prorogé une fois par le ministre chargé du domaine.
+
 **Liens relatifs à cet article**
 
 _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
-
-_Anciens textes_:
-
-  - Code du domaine de l'Etat - art. R129-4 (Ab)
+  - Décret n°2012-203 du 10 février 2012 - art. 5
 
 _Cité par_:
 
@@ -28,3 +32,7 @@ _Cité par_:
   - Code général de la propriété des personnes publ... - art. R3211-23 (V)
   - Code général de la propriété des personnes publ... - art. R3211-25 (V)
   - Code général de la propriété des personnes publ... - art. R3211-7 (V)
+
+_Cite_:
+
+  - Code de l'urbanisme - art. L240-1
