--- a/02. Partie réglementaire/Article R3211-14 - 24885662.md
+++ b/02. Partie réglementaire/Article R3211-14 - 24885662.md
@@ -1,7 +1,7 @@
 # Article R3211-14
 
-Une décote peut être appliquée lorsqu'un terrain est aliéné en vue de recevoir au moins 75 % de surface hors œuvre nette
-affectée au logement et comportant des logements locatifs sociaux mentionnés aux 3° et 5° de l'article L. 351-2 du code de la
+Une décote peut être appliquée lorsqu'un terrain est aliéné en vue de recevoir au moins 75 % de surface de plancher affectée
+au logement et comportant des logements locatifs sociaux mentionnés aux 3° et 5° de l'article L. 351-2 du code de la
 construction et de l'habitation. L'avantage financier résultant de la décote est exclusivement et en totalité répercuté dans
 le prix de revient des logements locatifs sociaux réalisés sur le terrain aliéné.
 
@@ -11,13 +11,9 @@ _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
-
-_Anciens textes_:
-
-  - Code du domaine de l'Etat - art. R148-6 (Ab)
+  - Décret n°2011-2054 du 29 décembre 2011 - art. 6 (VD)
 
 _Cité par_:
 
@@ -26,4 +22,4 @@ _Cité par_:
 
 _Cite_:
 
-  - Code de la construction et de l'habitation. - art. L351-2 (V)
+  - Code de la construction et de l'habitation. - art. L351-2
