--- a/02. Partie réglementaire/Article R3211-15 - 24885664.md
+++ b/02. Partie réglementaire/Article R3211-15 - 24885664.md
@@ -2,7 +2,7 @@
 
 La décote ne peut excéder 25 % ou, dans la zone définie en fonction du niveau du marché foncier par arrêté conjoint des
 ministres chargés du budget et du logement, 35 % du produit de la valeur vénale du terrain, pondérée par le rapport de la
-surface hors œuvre nette affectée au logement locatif social à la surface hors œuvre nette totale du programme immobilier.
+surface de plancher affectée au logement locatif social à la surface de plancher totale du programme immobilier.
 
 **Liens relatifs à cet article**
 
@@ -10,9 +10,9 @@ _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
+  - Décret n°2011-2054 du 29 décembre 2011 - art. 6 (VD)
 
 _Cité par_:
 
@@ -26,7 +26,3 @@ _Cité par_:
   - Code général de la propriété des personnes publ... - art. R3211-32-7 (V)
   - Code général de la propriété des personnes publ... - art. R3211-32-8 (V)
   - Code général de la propriété des personnes publ... - art. R3211-7 (V)
-
-_Anciens textes_:
-
-  - Code du domaine de l'Etat - art. R148-7 (Ab)
