--- a/02. Partie réglementaire/Article R2222-18 - 24885372.md
+++ b/02. Partie réglementaire/Article R2222-18 - 24885372.md
@@ -1,10 +1,8 @@
 # Article R2222-18
 
 Dans les immeubles dépendant de son domaine privé, l'Etat peut accorder à ses agents civils ou militaires une concession de
-logement, par nécessité absolue de service ou par utilité de service, dans les conditions prévues aux articles R. 2124-65 à
-D. 2124-76. 
-
-L'occupation d'un logement, étrangère à toute considération de service, peut faire l'objet d'un bail.
+logement par nécessité absolue de service ou une convention d'occupation précaire avec astreinte, dans les conditions prévues
+aux articles R. 2124-65 à D. 2124-75-1.
 
 **Liens relatifs à cet article**
 
@@ -12,9 +10,9 @@ _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
+  - Décret n°2012-752 du 9 mai 2012 - art. 2
 
 _Anciens textes_:
 
@@ -33,10 +31,10 @@ _Anciens textes_:
   - Code du domaine de l'Etat - art. R98 (Ab), alinéa 1, ecqc les concessions de logement dans les immeubles appartenant à l'Etat et dépendant de son domaine privé.
   - Code du domaine de l'Etat - art. R99 (Ab), ecqc les concessions de logement dans les immeubles appartenant à l'Etat et dépendant de son domaine privé.
 
-_Cite_:
-
-  - Code général de la propriété des personnes publ... - art. R2124-65 (V)
-
 _Cité par_:
 
   - Code général de la propriété des personnes publ... - art. R2222-4-1 (V)
+
+_Cite_:
+
+  - Code général de la propriété des personnes publiques. - art. R2124-65
