--- a/02. Partie réglementaire/Article D2124-75 - 24885201.md
+++ b/02. Partie réglementaire/Article D2124-75 - 24885201.md
@@ -9,13 +9,9 @@ _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
-
-_Anciens textes_:
-
-  - Code du domaine de l'Etat - art. D14 (Ab), ecqc les concessions de logement dans les immeubles appartenant à l'Etat et dépendant de son domaine public accordées en métropole.
+  - Décret n°2012-752 du 9 mai 2012 - art. 1
 
 _Cité par_:
 
