--- a/02. Partie réglementaire/Article D4112-3 - 25857469.md
+++ b/02. Partie réglementaire/Article D4112-3 - 25857469.md
@@ -2,10 +2,10 @@
 
 La commission interministérielle mentionnée aux articles D. 1221-3 à D. 1221-6 est chargée d'émettre un avis sur les projets
 de prise à bail d'immeubles poursuivis à l'étranger par l'Etat lorsque le montant du loyer annuel, charges comprises, est
-égal ou supérieur à un montant fixé par arrêté du ministre chargé du domaine et du ministre des affaires étrangères. 
+égal ou supérieur à un montant fixé par arrêté du ministre chargé du domaine et du ministre des affaires étrangères.
 
 Il ne peut être passé outre à son avis défavorable que par décision conjointe du ministre chargé du domaine, du ministre des
-affaires étrangères et, le cas échéant, du ministre intéressé. 
+affaires étrangères et, le cas échéant, du ministre intéressé.
 
 Lorsqu'il n'est pas justifié de l'avis de la commission ou, le cas échéant, de la décision de passer outre mentionnée au
 deuxième alinéa, il est fait défense, d'une part, aux membres du corps de contrôle général économique et financier de viser
@@ -18,14 +18,10 @@ _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+**Liens**:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
-
-_Anciens textes_:
-
-  - Code du domaine de l'Etat - art. D36 (Ab), ecqc les prises à bail d'immeubles à l'étranger.
+  - DEPLACE: Décret n°2012-752 du 9 mai 2012 - art. 5
 
 _Cite_:
 
-  - Code général de la propriété des personnes publ... - art. D1221-3 (V)
+  - Code général de la propriété des personnes publiques. - art. D1221-3
