--- a/02. Partie réglementaire/Article R4112-1 - 25857479.md
+++ b/02. Partie réglementaire/Article R4112-1 - 25857479.md
@@ -10,10 +10,6 @@ _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+**Liens**:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
-
-_Anciens textes_:
-
-  - Code du domaine de l'Etat - art. R152 (Ab), alinéa 4, ecqc les opérations de prise à bail de biens.
+  - DEPLACE: Décret n°2012-752 du 9 mai 2012 - art. 5
