--- a/02. Partie réglementaire/Article R4112-2 - 25857474.md
+++ b/02. Partie réglementaire/Article R4112-2 - 25857474.md
@@ -9,10 +9,10 @@ _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+**Liens**:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
+  - DEPLACE: Décret n°2012-752 du 9 mai 2012 - art. 5
 
 _Cite_:
 
-  - Code général de la propriété des personnes publ... - art. R1221-2 (V)
+  - Code général de la propriété des personnes publiques. - art. R1221-2
