--- a/02. Partie réglementaire/Article R2111-15 - 24884799.md
+++ b/02. Partie réglementaire/Article R2111-15 - 24884799.md
@@ -1,7 +1,7 @@
 # Article R2111-15
 
-Les limites du domaine public fluvial sont fixées, dans les conditions définies au premier alinéa de l'article 8 du code du
-domaine public fluvial et de la navigation intérieure, par arrêté du préfet de département pour le domaine de l'Etat et par
+Les limites du domaine public fluvial sont fixées, dans les conditions définies au premier alinéa de l'article L. 2111-9 du
+code général de la propriété des personnes publiques, par arrêté du préfet de département pour le domaine de l'Etat et par
 arrêté de l'autorité compétente de la collectivité propriétaire pour le domaine des collectivités territoriales et de leurs
 groupements. 
 
@@ -10,18 +10,15 @@ les conditions prévues aux articles R. 11-4 à R. 11-14 du code de l'expropriat
 
 **Liens relatifs à cet article**
 
-_Anciens textes_:
-
-  - Décret n°2005-992 du 16 août 2005 - art. 7 (Ab)
-
 _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
+  - Décret n°2011-2018 du 29 décembre 2011 - art. 12
 
 _Cite_:
 
+  - Code général de la propriété des personnes publ... - art. L2111-9 (V)
   - CODE DE L'EXPROPRIATION POUR CAUSE D'UTILITE PU... - art. **R11-4 (VT)
