--- a/02. Partie réglementaire/Article R2111-8 - 24884783.md
+++ b/02. Partie réglementaire/Article R2111-8 - 24884783.md
@@ -1,10 +1,10 @@
 # Article R2111-8
 
 Le dossier de délimitation auquel sont annexés, le cas échéant, les avis prévus à l'article R. 2111-7 est soumis à enquête
-publique.
+publique. 
 
-Cette enquête est menée dans les formes prévues aux articles R. 123-1 à R. 123-23 du code de l'environnement et aux articles
-R. 2111-9 et R. 2111-10 du présent code.
+Cette enquête est menée dans les formes prévues aux articles R. 123-1 à R. 123-27 du code de l'environnement et aux articles
+R. 2111-9 et R. 2111-10 du présent code. 
 
 Lorsque les procédures de délimitation du rivage de la mer, des lais et relais de la mer et des limites transversales de la
 mer à l'embouchure des fleuves et rivières sont conduites simultanément sur le même site, il est procédé à une enquête
@@ -12,18 +12,14 @@ unique.
 
 **Liens relatifs à cet article**
 
-_Anciens textes_:
-
-  - Décret n°2004-309 du 29 mars 2004 - art. 4 (Ab)
-
 _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
+  - Décret n°2011-2018 du 29 décembre 2011 - art. 11
 
 _Cite_:
 
-  - CODE DE L'EXPROPRIATION POUR CAUSE D'UTILITE PU... - art. **R11-4 (VT)
+  - Code de l'environnement - art. R123-1 (V)
