--- a/02. Partie réglementaire/Article R2323-1 - 24885523.md
+++ b/02. Partie réglementaire/Article R2323-1 - 24885523.md
@@ -1,23 +1,23 @@
 # Article R2323-1
 
 Les poursuites en vue du recouvrement des produits, redevances et sommes de toute nature mentionnés à l'article L. 2321-1
-s'opèrent dans les conditions prévues à l'article 87 du décret n° 62-1587 du 29 décembre 1962 portant règlement général sur
-la comptabilité publique.
+s'opèrent dans les conditions prévues à l'article 113 du décret n° 2012-1246 du 7 novembre 2012 relatif à la gestion
+budgétaire et comptable publique.
 
 **Liens relatifs à cet article**
-
-_Cite_:
-
-  - Décret n°62-1587 du 29 décembre 1962 - art. 87 (M)
-  - Code général de la propriété des personnes publ... - art. L2321-1 (V)
 
 _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+_Cite_:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
+  - Décret n°2012-1246 du 7 novembre 2012 - art. 113
+  - Code général de la propriété des personnes publiques. - art. L2321-1
+
+_Modifié par_:
+
+  - Décret n°2012-1247 du 7 novembre 2012 - art. 11
 
 _Cité par_:
 
