--- a/01. Partie législative/Article L3211-21 - 6361442.md
+++ b/01. Partie législative/Article L3211-21 - 6361442.md
@@ -1,13 +1,20 @@
 # Article L3211-21
 
 L'échange des biens et des droits à caractère immobilier qui appartiennent à l'Etat est consenti dans les conditions fixées
-par décret en Conseil d'Etat.
+par décret en Conseil d'Etat. 
+
+Les bois et forêts de l'Etat ne peuvent être échangés qu'avec des biens de même nature, après accord du ministre chargé des
+forêts. L'échange des immeubles mentionnés à l'article L. 3211-5-1 est subordonné aux mêmes conditions que leur aliénation.
 
 **Liens relatifs à cet article**
 
 _Codifié par_:
 
-  - Ordonnance 2006-460 2006-04-21 JORF 22 avril 2006
+  - Ordonnance n°2006-460 du 21 avril 2006
+
+_Modifié par_:
+
+  - Loi n°2012-1509 du 29 décembre 2012 - art. 51 (V)
 
 _Cité par_:
 
@@ -19,5 +26,8 @@ _Cité par_:
 
 _Anciens textes_:
 
-  - Code du domaine de l'Etat L41 ecqc les aliénations par voie d'échange
   - Code du domaine de l'Etat - art. L41 (Ab)
+
+_Cite_:
+
+  - Code général de la propriété des personnes publiques. - art. L3211-5-1
