--- a/01. Partie législative/Article L3113-1 - 6361409.md
+++ b/01. Partie législative/Article L3113-1 - 6361409.md
@@ -3,21 +3,24 @@
 Les transferts de propriété du domaine public fluvial au profit d'une collectivité territoriale ou d'un groupement de
 collectivités territoriales de la part de l'Etat ou d'une autre personne publique peuvent être opérés à la demande de
 l'assemblée délibérante de la collectivité territoriale ou du groupement. Ils le sont à titre gratuit et ne donnent lieu au
-paiement d'aucune indemnité, droit, taxe, salaire ou honoraires. Toutefois, les parties de cours d'eau, canaux, lacs ou plans
-d'eau inclus dans le périmètre d'une concession accordée par l'Etat au titre de l'utilisation de l'énergie hydraulique ne
-peuvent pas faire l'objet d'un transfert de propriété au profit des collectivités territoriales ou de leurs groupements.
+paiement d'aucune indemnité, droit, taxe, contribution prévue à l'article 879 du code général des impôts ou honoraires.
+Toutefois, les parties de cours d'eau, canaux, lacs ou plans d'eau inclus dans le périmètre d'une concession accordée par
+l'Etat au titre de l'utilisation de l'énergie hydraulique ne peuvent pas faire l'objet d'un transfert de propriété au profit
+des collectivités territoriales ou de leurs groupements. 
 
 Ces transferts s'opèrent en priorité au profit de la région ou du groupement de régions territorialement compétent qui en
 fait la demande. Lorsque d'autres collectivités ou groupements de collectivités territorialement compétents souhaitent
 bénéficier d'un tel transfert, leurs demandes sont transmises pour avis à la région. Ils peuvent bénéficier de ce transfert
 si, à l'issue d'un délai de six mois à compter de la saisine pour avis, la région territorialement compétente n'a pas elle-
-même formulé la demande.
+même formulé la demande. 
 
-Le transfert est refusé si la cohérence hydraulique ne peut pas être assurée.
+Le transfert est refusé si la cohérence hydraulique ne peut pas être assurée ou, dans le cas d'une demande de transfert
+portant sur un port intérieur situé sur une voie non transférable, s'il risque de compromettre le développement du transport
+de fret fluvial. 
 
 La collectivité territoriale ou le groupement de collectivités territoriales bénéficiaire du transfert succède dans
 l'ensemble des droits et obligations à l'égard des tiers à la personne publique gestionnaire de ce domaine avant la date du
-transfert.
+transfert. 
 
 Pour l'application du présent article, le représentant de l'Etat dans le département communique aux collectivités
 territoriales ou groupements intéressés qui en font la demande toutes les informations dont il dispose sur le domaine public
@@ -43,14 +46,14 @@ _Cité par_:
   - Code général de la propriété des personnes publ... - art. R3113-1 (V)
   - Code général de la propriété des personnes publ... - art. R3113-4 (VT)
 
-_Codifié par_:
-
-  - Ordonnance 2006-460 2006-04-21 JORF 22 avril 2006
-
-_Modifié par_:
-
-  - Loi n°2006-1772 du 30 décembre 2006 - art. 3 () JORF 31 décembre 2006
-
 _Anciens textes_:
 
   - Code du domaine public fluvial et de la navigation intérieure art. 1-1 al. 2 à 6
+
+_Modifié par_:
+
+  - Loi n°2012-77 du 24 janvier 2012 - art. 4
+
+_Cite_:
+
+  - Code général des impôts, CGI. - art. 879
