--- a/02. Partie réglementaire/Article R3211-13 - 24885659.md
+++ b/02. Partie réglementaire/Article R3211-13 - 24885659.md
@@ -1,8 +1,11 @@
 # Article R3211-13
 
-L'aliénation des terrains du domaine privé de l'Etat mentionnés à l'article L. 3211-7 peut être consentie à un prix inférieur
-à la valeur vénale déterminée par le directeur départemental des finances publiques, par application d'une décote dans les
-conditions prévues aux articles R. 3211-14 à R. 3211-17.
+L'aliénation des terrains, bâtis ou non bâtis, du domaine privé de l'Etat mentionnés à l'article L. 3211-7 peut être
+consentie à un prix inférieur à la valeur vénale déterminée par le directeur départemental des finances publiques, par
+application d'une décote dans les conditions prévues aux articles R. 3211-14 à R. 3211-17-4. 
+
+Les terrains bâtis mentionnés à l'alinéa précédent s'entendent de ceux dont les constructions existantes sont destinées à
+être démolies ou restructurées en vue de permettre la réalisation des programmes de construction.
 
 **Liens relatifs à cet article**
 
@@ -10,19 +13,15 @@ _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
-
-_Anciens textes_:
-
-  - Code du domaine de l'Etat - art. R148-5 (Ab)
-
-_Cite_:
-
-  - Code général de la propriété des personnes publ... - art. L3211-7 (V)
+  - Décret n°2013-315 du 15 avril 2013 - art. 1
 
 _Cité par_:
 
   - Code général de la propriété des personnes publ... - art. R3211-14 (V)
   - Code général de la propriété des personnes publ... - art. R5211-1 (V)
+
+_Cite_:
+
+  - Code général de la propriété des personnes publiques. - art. L3211-7
