--- a/02. Partie réglementaire/Article R3211-14 - 24885662.md
+++ b/02. Partie réglementaire/Article R3211-14 - 24885662.md
@@ -1,9 +1,10 @@
 # Article R3211-14
 
-Une décote peut être appliquée lorsqu'un terrain est aliéné en vue de recevoir au moins 75 % de surface de plancher affectée
-au logement et comportant des logements locatifs sociaux mentionnés aux 3° et 5° de l'article L. 351-2 du code de la
-construction et de l'habitation. L'avantage financier résultant de la décote est exclusivement et en totalité répercuté dans
-le prix de revient des logements locatifs sociaux réalisés sur le terrain aliéné.
+La décote prévue à l'article L. 3211-7 peut être appliquée lorsqu'un terrain mentionné à l'article R. 3211-13 est aliéné en
+vue de recevoir au moins 75 % de surface de plancher affectée au logement et comportant des logements locatifs sociaux
+mentionnés aux 3° et 5° de l'article L. 351-2 du code de la construction et de l'habitation, des logements assimilés aux
+logements locatifs sociaux ou des logements en accession à la propriété mentionnés au VIII de l'article L. 3211-7 du présent
+code.
 
 **Liens relatifs à cet article**
 
@@ -13,7 +14,7 @@ _Codifié par_:
 
 _Modifié par_:
 
-  - Décret n°2011-2054 du 29 décembre 2011 - art. 6 (VD)
+  - Décret n°2013-315 du 15 avril 2013 - art. 1
 
 _Anciens textes_:
 
@@ -26,4 +27,5 @@ _Cité par_:
 
 _Cite_:
 
+  - Code général de la propriété des personnes publiques. - art. L3211-7
   - Code de la construction et de l'habitation. - art. L351-2
