--- a/01. Partie législative/Article L5112-6 - 6361490.md
+++ b/01. Partie législative/Article L5112-6 - 6361490.md
@@ -8,7 +8,7 @@ A défaut d'identification des personnes mentionnées à l'alinéa précédent, 
 cession à titre onéreux aux occupants de constructions affectées à leur habitation édifiées avant le 1er janvier 1995. 
 
 Les demandes de cession faites en application du présent article doivent, sous peine de forclusion, être déposées avant le
-1er janvier 2013. 
+1er janvier 2015. 
 
 Le prix de cession est déterminé d'après la valeur vénale du terrain nu à la date du dépôt de la demande de cession. Il est
 fixé selon les règles applicables à l'aliénation des immeubles du domaine privé. 
@@ -32,7 +32,7 @@ _Cité par_:
 
 _Modifié par_:
 
-  - Loi n°2010-788 du 12 juillet 2010 - art. 32 (M)
+  - Loi n°2013-922 du 17 octobre 2013 - art. 2
 
 _Anciens textes_:
 
@@ -40,4 +40,4 @@ _Anciens textes_:
 
 _Cite_:
 
-  - Code général de la propriété des personnes publ... - art. L5112-1 (V)
+  - Code général de la propriété des personnes publiques. - art. L5112-1
