--- a/01. Partie législative/Article L2124-28 - 6361265.md
+++ b/01. Partie législative/Article L2124-28 - 6361265.md
@@ -2,7 +2,7 @@
 
 Le titulaire de l'autorisation de prospections préalables ou du titre de recherche et d'exploitation est, en cas de retrait
 ou de réduction de l'assiette de l'autorisation domaniale mentionnée à l'article L. 2124-27, soumis aux obligations fixées
-par l'article L. 123-3 du code minier.
+aux articles L. 123-6 et L. 133-8 du code minier.
 
 **Liens relatifs à cet article**
 
@@ -12,14 +12,15 @@ _Codifié par_:
 
 _Modifié par_:
 
-  - Ordonnance n°2011-91 du 20 janvier 2011 - art. 7
+  - Loi n°2014-1545 du 20 décembre 2014 - art. 50
+
+_Cite_:
+
+  - Code général de la propriété des personnes publ... - art. L2124-27 (V)
+  - Code minier (nouveau) - art. L123-6 (V)
+  - Code minier (nouveau) - art. L133-8 (V)
 
 _Cité par_:
 
   - Code général de la propriété des personnes publ... - art. L5163-5 (V)
   - Code général de la propriété des personnes publ... - art. L5211-1 (V)
-
-_Cite_:
-
-  - Code général de la propriété des personnes publiques. - art. L2124-27
-  - Code minier (nouveau) - art. L123-3 (V)
