--- a/01. Partie législative/Article L1121-3 - 6361144.md
+++ b/01. Partie législative/Article L1121-3 - 6361144.md
@@ -1,7 +1,7 @@
 # Article L1121-3
 
-Dans tous les cas où les dons et legs donnent lieu à des réclamations des héritiers légaux, l'autorisation de les accepter
-est donnée par décret en Conseil d'Etat.
+Dans tous les cas où les dons et legs donnent lieu à des réclamations des héritiers légaux, l'autorisation de les accepter,
+en tout ou partie, est donnée par décret en Conseil d'Etat.
 
 **Liens relatifs à cet article**
 
@@ -16,7 +16,11 @@ _Cité par_:
 
 _Codifié par_:
 
-  - Ordonnance 2006-460 2006-04-21 JORF 22 avril 2006
+  - Ordonnance n°2006-460 du 21 avril 2006
+
+_Modifié par_:
+
+  - Loi n°2014-1545 du 20 décembre 2014 - art. 50
 
 _Anciens textes_:
 
