--- a/01. Partie législative/Article L2124-27 - 6361264.md
+++ b/01. Partie législative/Article L2124-27 - 6361264.md
@@ -2,8 +2,7 @@
 
 L'autorisation domaniale nécessaire pour la recherche et l'exploitation des substances minérales autres que celles
 mentionnées à l'article L. 111-1 du code minier lorsqu'elles sont contenues dans les fonds marins du domaine public est
-délivrée en application des règles fixées à la section 1 du chapitre III du titre II et à la section 1 du chapitre II du
-titre III du livre 1er du code minier.
+délivrée en application des règles fixées à la section 2 du chapitre III des titres II et III du livre Ier du code minier.
 
 **Liens relatifs à cet article**
 
@@ -13,11 +12,11 @@ _Codifié par_:
 
 _Modifié par_:
 
-  - Ordonnance n°2011-91 du 20 janvier 2011 - art. 7
+  - Loi n°2014-1545 du 20 décembre 2014 - art. 50
 
 _Cité par_:
 
-  - Code général de la propriété des personnes publ... - art. L2124-28 (VD)
+  - Code général de la propriété des personnes publ... - art. L2124-28 (V)
   - Code général de la propriété des personnes publ... - art. L2124-3 (V)
   - Code général de la propriété des personnes publ... - art. L5163-4 (V)
   - Code général de la propriété des personnes publ... - art. L5211-1 (V)
@@ -25,4 +24,4 @@ _Cité par_:
 
 _Cite_:
 
-  - Code minier (nouveau) - art. L111-1 (V)
+  - Code minier (nouveau) - art. L111-1
