--- a/02. Partie réglementaire/Article R1212-12 - 24884701.md
+++ b/02. Partie réglementaire/Article R1212-12 - 24884701.md
@@ -7,8 +7,8 @@ de l'Etat.
 Les fonctionnaires ainsi désignés agissent également au nom des établissements mentionnés à l'article R. 1212-10, si ceux-ci
 l'ont demandé. 
 
-Les désignations prévues au présent article ne peuvent porter sur les agents mentionnés à l'article R. 13-7 du code de
-l'expropriation pour cause d'utilité publique.
+Les désignations prévues au présent article ne peuvent porter sur les agents mentionnés aux articles R. 212-1 et R. 311-24 du
+code de l'expropriation pour cause d'utilité publique.
 
 **Liens relatifs à cet article**
 
@@ -16,19 +16,16 @@ _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
-
-_Anciens textes_:
-
-  - Code du domaine de l'Etat - art. R179 (Ab), ecqc  l'Etat et ses établissements publics.
-
-_Cite_:
-
-  - Code général de la propriété des personnes publ... - art. R1212-10 (V)
-  - CODE DE L'EXPROPRIATION POUR CAUSE D'UTILITE PU... - art. **R13-7 (V)
+  - Décret n°2014-1635 du 26 décembre 2014 - art. 4
 
 _Cité par_:
 
   - Code général de la propriété des personnes publ... - art. R1212-11 (V)
+
+_Cite_:
+
+  - Code général de la propriété des personnes publiques. - art. R1212-10
+  - Code de l'expropriation pour cause d'utilité pu... - art. R212-1 (V)
+  - Code de l'expropriation pour cause d'utilité pu... - art. R311-24 (V)
