--- a/01. Partie législative/Article L3211-7 - 6361425.md
+++ b/01. Partie législative/Article L3211-7 - 6361425.md
@@ -1,20 +1,20 @@
 # Article L3211-7
 
 I. - L'Etat peut procéder à l'aliénation de terrains de son domaine privé à un prix inférieur à la valeur vénale lorsque ces
-terrains, bâtis ou non, sont destinés à la réalisation de programmes de constructions comportant essentiellement des
-logements dont une partie au moins est réalisée en logement social. Pour la part du programme destinée aux logements sociaux,
-la décote ainsi consentie, qui peut atteindre 100 % de la valeur vénale du terrain, est fixée en fonction de la catégorie à
-laquelle ces logements appartiennent. Elle prend notamment en considération les circonstances locales tenant à la situation
-du marché foncier et immobilier, à la situation financière de l'acquéreur du terrain, à la proportion et à la typologie des
-logements sociaux existant sur le territoire de la collectivité considérée et aux conditions financières et techniques de
-l'opération. La décote ne saurait excéder 50 % pour les logements financés en prêts locatifs sociaux et pour les logements en
-accession à la propriété bénéficiant des dispositifs mentionnés au VIII. 
+terrains, bâtis ou non, sont destinés à la réalisation de programmes comportant essentiellement des logements dont une partie
+au moins est réalisée en logement social. Pour la part du programme destinée aux logements sociaux, la décote ainsi
+consentie, qui peut atteindre 100 % de la valeur vénale du terrain, est fixée en fonction de la catégorie à laquelle ces
+logements appartiennent. Elle prend notamment en considération les circonstances locales tenant à la situation du marché
+foncier et immobilier, à la situation financière de l'acquéreur du terrain, à la proportion et à la typologie des logements
+sociaux existant sur le territoire de la collectivité considérée et aux conditions financières et techniques de l'opération.
+La décote ne saurait excéder 50 % pour les logements financés en prêts locatifs sociaux et pour les logements en accession à
+la propriété bénéficiant des dispositifs mentionnés au VIII. 
 
-Pour les communes qui ne font pas l'objet d'un constat de carence, dans le cadre d'un programme de construction de logements
-sociaux, dans les conditions fixées au présent article, une décote est possible pour la part du programme dont l'objet est la
-construction d'équipements publics destinés en tout ou partie aux occupants de ces logements. La décote ainsi consentie est
-alignée sur la décote allouée pour la part du programme consacrée aux logements sociaux. Les modalités d'application du
-présent alinéa et la liste des équipements publics concernés sont fixées par décret en Conseil d'Etat.  
+Pour les communes qui ne font pas l'objet d'un constat de carence, dans le cadre d'un programme de logements sociaux, dans
+les conditions fixées au présent article, une décote est possible pour la part du programme relative aux équipements publics
+destinés en tout ou partie aux occupants de ces logements. La décote ainsi consentie est alignée sur la décote allouée pour
+la part du programme consacrée aux logements sociaux. Les modalités d'application du présent alinéa et la liste des
+équipements publics concernés sont fixées par décret en Conseil d'Etat. 
 
 II. - Une décote est de droit lorsque les deux conditions suivantes sont satisfaites : 
 
@@ -34,11 +34,10 @@ satisfaire des besoins locaux en matière de logement.
 
 Les présentes dispositions ne s'appliquent aux organismes agréés mentionnés à l'article L. 365-2 du code de la construction
 et de l'habitation et aux sociétés d'économie mixte mentionnées à l'article L. 481-1 du même code que pour les cessions de
-terrains destinés à la construction de logements faisant l'objet de conventions régies par le chapitre III du titre V du
-livre III dudit code. 
+terrains destinés à des programmes de logements faisant l'objet de conventions régies par le chapitre III du titre V du livre
+III dudit code. 
 
-II bis. - Jusqu'au 31 décembre 2019, lorsqu'il s'agit de terrains occupés par le ministère de la défense, le taux de la
-décote consentie en application des I ou II ne peut excéder 30 % de leur valeur vénale.  
+II bis. - (Abrogé)
 
 III. - L'avantage financier résultant de la décote est exclusivement et en totalité répercuté sur le prix de revient des
 logements locatifs sociaux. 
@@ -97,15 +96,15 @@ convention conclue entre le représentant de l'Etat dans la région et l'acquér
 par tranches échelonnées sur une durée totale supérieure à cinq ans et permettant chacune un contrôle du dispositif de
 décote, dans les conditions prévues aux troisième et quatrième alinéas du présent V. 
 
-La convention peut prévoir, en outre, le droit de réservation d'un contingent plafonné à 10 % des logements sociaux
-construits, au profit de l'administration qui cède son terrain avec décote, pour le logement de ses agents, au-delà du
+La convention peut prévoir, en outre, le droit de réservation d'un contingent plafonné à 10 % des logements sociaux du
+programme, au profit de l'administration qui cède son terrain avec décote, pour le logement de ses agents, au-delà du
 contingent dont dispose l'Etat. 
 
 VI. - Le représentant de l'Etat dans la région, assisté du comité régional de l'habitat, contrôle l'effectivité de toute
 convention annexée à un acte d'aliénation et définie au V du présent article. A cet effet, l'acquéreur des terrains
-mentionnés au 2° du II rend compte de l'état d'avancement du programme de constructions au comité régional de l'habitat ainsi
-qu'à la commune sur le territoire de laquelle se trouve le terrain cédé. Cette obligation prend fin au jour de la livraison
-effective du programme de logements ou au jour de la résiliation de la convention. 
+mentionnés au 2° du II rend compte de l'état d'avancement du programme au comité régional de l'habitat ainsi qu'à la commune
+sur le territoire de laquelle se trouve le terrain cédé. Cette obligation prend fin au jour de la livraison effective du
+programme de logements ou au jour de la résiliation de la convention. 
 
 En cas de manquements constatés aux engagements pris par un acquéreur dans la convention qui accompagne l'acte de cession, le
 représentant de l'Etat dans la région, assisté du comité régional de l'habitat, mène la procédure contradictoire pouvant
@@ -113,9 +112,9 @@ aboutir à la résolution de la vente dans les conditions prévues au V.
 
 Le représentant de l'Etat dans la région établit chaque année un bilan qui dresse notamment la liste des terrains
 disponibles, des terrains cédés au cours de l'année écoulée, des modalités et des prix de cession ainsi que des logements
-sociaux mis en chantier sur les parcelles cédées. Ce bilan est transmis à la commission nationale mentionnée au VII chargée
-d'établir, pour le compte du ministre chargé du logement, le rapport annuel au Parlement sur la mise en œuvre du dispositif,
-lequel fait l'objet d'un débat devant les commissions permanentes. 
+sociaux mis en chantier ou livrés sur les parcelles cédées. Ce bilan est transmis à la commission nationale mentionnée au VII
+chargée d'établir, pour le compte du ministre chargé du logement, le rapport annuel au Parlement sur la mise en œuvre du
+dispositif, lequel fait l'objet d'un débat devant les commissions permanentes. 
 
 VII. - Il est créé, auprès des ministres chargés du logement et de l'urbanisme, une Commission nationale de l'aménagement, de
 l'urbanisme et du foncier. Elle est composée de deux membres de l'Assemblée nationale et de deux membres du Sénat, de
@@ -127,8 +126,8 @@ l'immobilier, des professionnels de l'aménagement, des organisations de défens
 
 La commission nationale mentionnée au présent VII est chargée de suivre le dispositif de mobilisation du foncier public en
 faveur du logement. Elle est en particulier chargée de s'assurer que la stratégie adoptée par l'Etat et les établissements
-publics concernés est de nature à favoriser la cession de biens appartenant à leur domaine privé au profit de la construction
-de logements sociaux. Le décret en Conseil d'Etat prévu au IX précise sa composition et fixe ses modalités de travail et de
+publics concernés est de nature à favoriser la cession de biens appartenant à leur domaine privé au profit de programmes de
+logements sociaux. Le décret en Conseil d'Etat prévu au IX précise sa composition et fixe ses modalités de travail et de
 décision. 
 
 VIII. - Pour l'application du présent article, sont assimilés aux logements locatifs mentionnés aux 3° et 5° de l'article L.
@@ -211,9 +210,8 @@ _Cité par_:
 
 _Modifié par_:
 
-  - Loi n°2010-1657 du 29 décembre 2010 - art. 169 (VT)
-  - Loi n°2015-990 du 6 août 2015 - art. 101
-  - Loi n°2015-990 du 6 août 2015 - art. 97
+  - Loi n°2015-1785 du 29 décembre 2015 - art. 54
+  - Loi n°2015-1785 du 29 décembre 2015 - art. 55
 
 _Anciens textes_:
 
