--- a/01. Partie législative/Article L2222-20 - 6361354.md
+++ b/01. Partie législative/Article L2222-20 - 6361354.md
@@ -1,12 +1,14 @@
 # Article L2222-20
 
 Lorsque la propriété d'un immeuble a été attribuée, dans les conditions fixées à l'article L. 1123-3, à une commune, à un
-établissement public de coopération intercommunale à fiscalité propre ou, à défaut, à l'Etat, le propriétaire ou ses ayants
-droit sont en droit d'en exiger la restitution. Toutefois, il ne peut être fait droit à cette demande si le bien a été aliéné
-ou utilisé d'une manière s'opposant à cette restitution. Ils ne peuvent, dans ce cas, obtenir de la commune, de
-l'établissement public de coopération intercommunale à fiscalité propre ou de l'Etat que le paiement d'une indemnité
-représentant la valeur de l'immeuble au jour de l'acte d'aliénation ou, le cas échéant, du procès-verbal constatant la remise
-effective de l'immeuble au service ou à l'établissement public utilisateur. 
+établissement public de coopération intercommunale à fiscalité propre ou, à défaut, à l'Etat, au Conservatoire de l'espace
+littoral et des rivages lacustres ou au conservatoire régional d'espaces naturels agréé au titre de l'article L. 414-11 du
+code de l'environnement, le propriétaire ou ses ayants droit sont en droit d'en exiger la restitution. Toutefois, il ne peut
+être fait droit à cette demande si le bien a été aliéné ou utilisé d'une manière s'opposant à cette restitution. Ils ne
+peuvent, dans ce cas, obtenir de la commune, de l'établissement public de coopération intercommunale à fiscalité propre, de
+l'Etat, du Conservatoire de l'espace littoral et des rivages lacustres ou du conservatoire régional d'espaces naturels agréé
+que le paiement d'une indemnité représentant la valeur de l'immeuble au jour de l'acte d'aliénation ou, le cas échéant, du
+procès-verbal constatant la remise effective de l'immeuble au service ou à l'établissement public utilisateur. 
 
 A défaut d'accord amiable, l'indemnité est fixée par le juge compétent en matière d'expropriation pour cause d'utilité
 publique. 
@@ -14,7 +16,8 @@ publique.
 La restitution de l'immeuble, ou à défaut, le paiement de l'indemnité, est subordonné au paiement par le propriétaire ou ses
 ayants droit du montant des charges qu'ils ont éludées depuis le point de départ du délai de trois ans mentionné au deuxième
 alinéa de l'article L. 1123-3, ainsi que du montant des dépenses nécessaires à la conservation du bien engagées par la
-commune, par l'établissement public de coopération intercommunale à fiscalité propre, ou par l'Etat.
+commune, par l'établissement public de coopération intercommunale à fiscalité propre, par l'Etat, par le Conservatoire de
+l'espace littoral et des rivages lacustres ou par le conservatoire régional d'espaces naturels agréé.
 
 **Liens relatifs à cet article**
 
@@ -24,7 +27,7 @@ _Codifié par_:
 
 _Modifié par_:
 
-  - Loi n°2014-366 du 24 mars 2014 - art. 152
+  - Loi n°2016-1087 du 8 août 2016 - art. 109
 
 _Cité par_:
 
@@ -37,4 +40,5 @@ _Anciens textes_:
 
 _Cite_:
 
-  - Code général de la propriété des personnes publiques. - art. L1123-3
+  - Code général de la propriété des personnes publ... - art. L1123-3 (V)
+  - Code de l'environnement - art. L414-11 (V)
