--- a/01. Partie législative/Article L1123-3 - 6361153.md
+++ b/01. Partie législative/Article L1123-3 - 6361153.md
@@ -17,10 +17,13 @@ Dans le cas où un propriétaire ne s'est pas fait connaître dans un délai de 
 dernière des mesures de publicité mentionnées au deuxième alinéa, l'immeuble est présumé sans maître. La commune ou
 l'établissement public de coopération intercommunale à fiscalité propre peut, par délibération de son organe délibérant,
 l'incorporer dans son domaine. Cette incorporation est constatée par arrêté du maire ou du président de l'établissement
-public de coopération intercommunale à fiscalité propre.
+public de coopération intercommunale à fiscalité propre. 
 
 A défaut de délibération prise dans un délai de six mois à compter de la vacance présumée du bien, la propriété de celui-ci
-est attribuée à l'Etat. Le transfert du bien dans le domaine de l'Etat est constaté par un acte administratif.
+est attribuée à l'Etat. Toutefois, lorsque le bien est situé dans l'une des zones définies à l'article L. 322-1 du code de
+l'environnement, la propriété est transférée au Conservatoire de l'espace littoral et des rivages lacustres lorsqu'il en fait
+la demande ou, à défaut, au conservatoire régional d'espaces naturels agréé au titre de l'article L. 414-11 du même code
+lorsqu'il en fait la demande. Le transfert du bien est constaté par un acte administratif.
 
 **Liens relatifs à cet article**
 
@@ -30,12 +33,12 @@ _Codifié par_:
 
 _Modifié par_:
 
-  - Loi n°2014-366 du 24 mars 2014 - art. 152
+  - Loi n°2016-1087 du 8 août 2016 - art. 109
 
 _Cité par_:
 
   - Ordonnance n°2016-1255 du 28 septembre 2016 - art. 11 (VD)
-  - Code général de la propriété des personnes publ... - art. L2222-20 (M)
+  - Code général de la propriété des personnes publ... - art. L2222-20 (V)
   - Code général de la propriété des personnes publ... - art. L2222-23 (V)
   - Code général de la propriété des personnes publ... - art. L3211-8 (V)
   - Code général de la propriété des personnes publ... - art. L5221-3 (VT)
@@ -51,6 +54,8 @@ _Cite_:
 
   - Code général des impôts, CGI. - art. 1657
   - Code général de la propriété des personnes publiques. - art. L1123-1
+  - Code de l'environnement - art. L322-1 (V)
+  - Code de l'environnement - art. L414-11 (V)
 
 _Anciens textes_:
 
