--- a/01. Partie législative/Article L2124-1 - 6361233.md
+++ b/01. Partie législative/Article L2124-1 - 6361233.md
@@ -3,17 +3,14 @@
 Les décisions d'utilisation du domaine public maritime tiennent compte de la vocation des zones concernées et de celles des
 espaces terrestres avoisinants, ainsi que des impératifs de préservation des sites et paysages du littoral et des ressources
 biologiques ; elles sont à ce titre coordonnées notamment avec celles concernant les terrains avoisinants ayant vocation
-publique.
+publique. 
+
+Ces décisions doivent être compatibles avec les objectifs environnementaux du plan d'action pour le milieu marin prévus aux
+articles L. 219-9 à L. 219-18 du code de l'environnement. 
 
 Sous réserve des textes particuliers concernant la défense nationale et des besoins de la sécurité maritime, tout changement
 substantiel d'utilisation de zones du domaine public maritime est préalablement soumis à enquête publique réalisée
 conformément au chapitre III du titre II du livre Ier du code de l'environnement.
-
-**Nota:**
-
-Ces dispositions s'appliquent aux projets, plans, programmes ou autres documents de planification pour lesquels l'arrêté
-d'ouverture et d'organisation de l'enquête publique est publié à compter du premier jour du sixième mois après la publication
-du décret en Conseil d'Etat prévu à l'article L. 123-19 du code de l'environnement.
 
 **Liens relatifs à cet article**
 
@@ -26,8 +23,13 @@ _Cité par_:
 
 _Modifié par_:
 
-  - Loi n°2010-788 du 12 juillet 2010 - art. 240
+  - Loi n°2016-1087 du 8 août 2016 - art. 159
 
 _Anciens textes_:
 
   - Code de l'environnement - art. L321-5 (V)
+
+_Cite_:
+
+  - Code de l'environnement -  Chapitre III : Participation du public aux déci... (V)
+  - Code de l'environnement - art. L219-9 (V)
