--- a/01. Partie législative/Article L2132-21 - 6361313.md
+++ b/01. Partie législative/Article L2132-21 - 6361313.md
@@ -1,13 +1,14 @@
 # Article L2132-21
 
 Sous réserve de dispositions législatives spécifiques, les agents de l'Etat assermentés à cet effet devant le tribunal de
-grande instance et les officiers de police judiciaire sont compétents pour constater les contraventions de grande voirie.
+grande instance, les agents de police judiciaire et les officiers de police judiciaire sont compétents pour constater les
+contraventions de grande voirie.
 
 **Liens relatifs à cet article**
 
 _Codifié par_:
 
-  - Ordonnance 2006-460 2006-04-21 JORF 22 avril 2006
+  - Ordonnance n°2006-460 du 21 avril 2006
 
 _Cité par_:
 
@@ -18,3 +19,7 @@ _Cité par_:
   - Code de la route. - art. R330-3 (V)
   - Code des transports - art. L4313-2 (V)
   - Code général de la propriété des personnes publ... - art. L2132-23 (V)
+
+_Modifié par_:
+
+  - Loi n°2016-1087 du 8 août 2016 - art. 111
