--- a/02. Partie réglementaire/Article R3211-17 - 24885668.md
+++ b/02. Partie réglementaire/Article R3211-17 - 24885668.md
@@ -1,29 +1,27 @@
 # Article R3211-17
 
-I.-Les équipements publics éligibles à l'application d'une décote de droit pour la part du programme dont l'objet est la
-construction de ces équipements appartiennent à l'une des catégories suivantes : 
+I. – Les équipements publics éligibles à l'application d'une décote pour la part du programme relative aux équipements
+appartiennent à l'une des catégories suivantes :
 
-1° Les équipements nécessaires à la petite enfance, notamment les crèches et les garderies ; 
+1° Les équipements nécessaires à la petite enfance, notamment les crèches et les garderies ;
 
-2° Les équipements nécessaires à l'enseignement scolaire ; 
+2° Les équipements nécessaires à l'enseignement scolaire ;
 
-3° Les équipements à caractère social ; 
+3° Les équipements à caractère social ;
 
-4° Les équipements à caractère sportif ; 
+4° Les équipements à caractère sportif ;
 
-5° Les équipements à caractère culturel. 
+5° Les équipements à caractère culturel.
 
-II.-Ces équipements publics sont des équipements de proximité nécessaires en tout ou partie aux habitants des logements
-mentionnés au II de l'article R. 3211-15 dont la construction est programmée, à l'exclusion des équipements
-d'infrastructure. 
+II. – Ces équipements publics sont des équipements de proximité nécessaires en tout ou partie aux habitants des logements
+mentionnés au II de l'article R. 3211-15 du programme, à l'exclusion des équipements d'infrastructure.
 
-III.-La décote sur la part du programme dont l'objet est la construction de ces équipements s'applique exclusivement sur la
-fraction du programme réalisée dans l'intérêt des occupants des logements appartenant aux catégories définies au II de
-l'article R. 3211-15. 
+III. – La décote sur la part du programme relative aux équipements s'applique exclusivement sur la fraction du programme
+réalisée dans l'intérêt des occupants des logements appartenant aux catégories définies au II de l'article R. 3211-15.
 
 Le taux de cette décote est égal au montant total de la décote accordée selon les modalités prévues au VI de l'article R.
 3211-15, rapporté à la valeur vénale du terrain correspondant aux seules surfaces de plancher des logements énumérés au II du
-même article. Ce taux est appliqué à la fraction du programme mentionnée à l'alinéa précédent. 
+même article. Ce taux est appliqué à la fraction du programme mentionnée à l'alinéa précédent.
 
 Cette décote s'ajoute au montant total et augmente le taux global de décote définis au VI de l'article R. 3211-15.
 
@@ -35,7 +33,7 @@ _Codifié par_:
 
 _Modifié par_:
 
-  - Décret n°2013-315 du 15 avril 2013 - art. 1
+  - Décret n°2016-1160 du 25 août 2016 - art. 5
 
 _Anciens textes_:
 
