--- a/02. Partie réglementaire/Article R3211-16 - 24885666.md
+++ b/02. Partie réglementaire/Article R3211-16 - 24885666.md
@@ -1,28 +1,28 @@
 # Article R3211-16
 
-I.-La liste mentionnée au 2° du II de l'article L. 3211-7 énumère des terrains destinés à être cédés pour y construire des
+I. – La liste mentionnée au 2° du II de l'article L. 3211-7 énumère des terrains destinés à être cédés pour des programmes de
 logements, dont les logements mentionnés au II de l'article R. 3211-15. Le préfet de région établit cette liste à partir
 notamment des propositions qui lui sont communiquées par le préfet du département du lieu de situation des terrains
-concernés. 
+concernés.
 
 Préalablement à l'inscription d'un terrain sur cette liste, le préfet de région recueille, dans un délai de deux mois, les
 avis du comité régional de l'habitat, du maire de la commune et du président de l'établissement public de coopération
-intercommunale concernés. 
+intercommunale concernés.
 
-En l'absence de réponse dans ce délai, l'avis est réputé favorable. 
+En l'absence de réponse dans ce délai, l'avis est réputé favorable.
 
-Cette liste est publiée au recueil des actes administratifs de la préfecture de région. 
+Cette liste est publiée au recueil des actes administratifs de la préfecture de région.
 
-II.-Lorsque l'une des personnes morales mentionnées au 1° du II de l'article L. 3211-7 demande que cette liste soit
+II. – Lorsque l'une des personnes morales mentionnées au 1° du II de l'article L. 3211-7 demande que cette liste soit
 complétée, elle adresse au préfet de région du lieu de situation du terrain concerné un dossier comportant un projet
 s'inscrivant dans une stratégie de mobilisation du foncier destinée à satisfaire des besoins locaux en matière de logement
 dont le contenu permet d'établir que le terrain de l'Etat dont l'inscription sur la liste est demandée est susceptible d'être
-cédé et de bénéficier de la décote prévue à l'article L. 3211-7. 
+cédé et de bénéficier de la décote prévue à l'article L. 3211-7.
 
 Le préfet de région complète la liste selon les modalités prévues au I, après avoir recueilli l'avis du préfet de département
-concerné. 
+concerné.
 
-En cas de refus d'inscription sur la liste, le préfet de région notifie sa décision motivée au demandeur. 
+En cas de refus d'inscription sur la liste, le préfet de région notifie sa décision motivée au demandeur.
 
 L'absence de réponse au demandeur dans le délai de quatre mois à compter de la saisine du préfet de région vaut refus
 implicite de la demande d'inscription.
@@ -33,14 +33,14 @@ _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Modifié par_:
-
-  - Décret n°2013-315 du 15 avril 2013 - art. 1
-
 _Cité par_:
 
   - Décret n°2014-1280 du 23 octobre 2014 - art. (V)
   - Code général de la propriété des personnes publ... - art. R3211-32-4 (V)
+
+_Modifié par_:
+
+  - Décret n°2016-1160 du 25 août 2016 - art. 4
 
 _Cite_:
 
