--- a/02. Partie réglementaire/Article R3211-17-9 - 27311730.md
+++ b/02. Partie réglementaire/Article R3211-17-9 - 27311730.md
@@ -1,14 +1,14 @@
 # Article R3211-17-9
 
-La commission est chargée : 
+La commission est chargée :
 
-1° De suivre le dispositif de mobilisation du foncier public en faveur du logement ; 
+1° De suivre le dispositif de mobilisation du foncier public en faveur du logement ;
 
 2° De s'assurer que la stratégie adoptée par l'Etat et les établissements publics concernés est de nature à favoriser la
-cession de biens appartenant à leur domaine privé au profit de la construction de logements sociaux ; 
+cession de biens appartenant à leur domaine privé au profit de programmes de logements sociaux ;
 
 3° D'élaborer le rapport annuel au Parlement sur la mise en œuvre du dispositif, lequel fait l'objet d'un débat devant les
-commissions permanentes conformément aux dispositions de l'article L. 3211-7. 
+commissions permanentes conformément aux dispositions de l'article L. 3211-7.
 
 Sur son initiative ou à la demande des ministres chargés du logement, de l'urbanisme ou du domaine, la commission peut
 examiner toute question relative à la mobilisation du foncier public en faveur du développement de l'offre de logement et à
@@ -16,9 +16,13 @@ la cession d'immeubles domaniaux en vue de la réalisation de programmes de loge
 
 **Liens relatifs à cet article**
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2013-315 du 15 avril 2013 - art. 1
+  - Décret n°2016-1160 du 25 août 2016 - art. 11
+
+_Abrogé par_:
+
+  - Décret n°2018-785 du 12 septembre 2018 - art. 21
 
 _Cite_:
 
