--- a/02. Partie réglementaire/Article R3211-7 - 24885645.md
+++ b/02. Partie réglementaire/Article R3211-7 - 24885645.md
@@ -16,6 +16,14 @@ acquéreur ou d'une catégorie d'acquéreurs déterminés ;
 d'intérêt général par une personne exclue du bénéfice d'une convention d'utilisation mentionnée à l'article R. 2313-1 ou par
 un établissement public de l'Etat à caractère industriel et commercial ; 
 
+Est considérée comme une opération d'intérêt général, au sens du présent 4°, l'aliénation des immeubles, bâtis ou non bâtis,
+du domaine privé de l'Etat lorsqu'elle est nécessaire à la réalisation d'une opération immobilière comportant plus de 70 % de
+la surface totale de plancher affectée aux logements appartenant aux catégories mentionnées au II de l'article R. 3211-15,
+qu'elle est effectuée au profit d'un organisme mentionné à l'article L. 411-2 du code de la construction et de l'habitation,
+d'une société d'économie mixte mentionnée aux articles L. 472-1-1 ou L. 481-1 du même code ou d'un organisme agréé mentionné
+à l'article L. 365-2 dudit code, et lorsqu'elle est réalisée dans les communes pour lesquelles les dispositions de la section
+2 du chapitre II du titre préliminaire du livre III du code de la construction et de l'habitation sont applicables. 
+
 5° Lorsque les conditions particulières d'utilisation de l'immeuble le justifient ; 
 
 6° Lorsque l'immeuble fait l'objet d'une convention d'utilisation mentionnée à l'article R. 2313-1 ou est confié en gestion à
@@ -29,9 +37,9 @@ _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
+  - Décret n°2016-1160 du 25 août 2016 - art. 1
 
 _Anciens textes_:
 
@@ -40,6 +48,12 @@ _Anciens textes_:
 _Cite_:
 
   - Code général de la propriété des personnes publ... - art. R2313-1 (V)
+  - Code général de la propriété des personnes publ... - art. R3211-15 (V)
+  - Code de la construction et de l'habitation. -  Section 2 : Etablissement du programme local de... (V)
+  - Code de la construction et de l'habitation. - art. L365-2 (V)
+  - Code de la construction et de l'habitation. - art. L411-2 (VT)
+  - Code de la construction et de l'habitation. - art. L472-1-1 (V)
+  - Code de la construction et de l'habitation. - art. L481-1 (V)
 
 _Cité par_:
 
