--- a/01. Partie législative/Article L3212-2 - 6361449.md
+++ b/01. Partie législative/Article L3212-2 - 6361449.md
@@ -35,7 +35,10 @@ personne agissant, à des fins non commerciales, dans le domaine culturel ou dan
 assimilés, lorsqu'elles contribuent à une action d'intérêt public, notamment diplomatique, d'appui aux opérations et de
 coopération internationale militaire. Les cessions peuvent concerner des biens acquis à cette fin ou des biens dont le
 ministère de la défense n'a plus l'emploi. La valeur des biens cédés ne peut dépasser un plafond annuel fixé par arrêté
-conjoint du ministre de la défense et du ministre des finances.
+conjoint du ministre de la défense et du ministre des finances ;
+
+9° Les cessions des biens archéologiques mobiliers déclassés, dans les conditions prévues à l'article L. 546-6 du code du
+patrimoine.
 
 **Liens relatifs à cet article**
 
@@ -46,14 +49,14 @@ _Cité par_:
   - Arrêté du 31 mai 2018 - art. 3 (V)
   - Code général de la propriété des personnes publ... - art. D3212-3 (V)
   - Code général de la propriété des personnes publ... - art. D3212-4 (V)
-  - Code général de la propriété des personnes publ... - art. L3212-3 (M)
+  - Code général de la propriété des personnes publ... - art. L3212-3 (V)
   - Code général de la propriété des personnes publ... - art. L5241-5 (VT)
   - Code général de la propriété des personnes publ... - art. L5441-5 (V)
   - Code général de la propriété des personnes publ... - art. R3212-2 (V)
 
 _Modifié par_:
 
-  - Ordonnance n°2017-562 du 19 avril 2017 - art. 11
+  - Ordonnance n°2017-1117 du 29 juin 2017 - art. 2
 
 _Cite_:
 
