--- a/01. Partie législative/Article L3212-3 - 6361450.md
+++ b/01. Partie législative/Article L3212-3 - 6361450.md
@@ -6,13 +6,14 @@ matériels informatiques dont ils n'ont plus l'emploi aux mêmes conditions que 
 
 Ils peuvent également céder gratuitement à leurs personnels les matériels informatiques et les logiciels nécessaires à leur
 utilisation dont ils n'ont plus l'emploi, aux mêmes conditions que celles fixées pour l'Etat ou l'un de ses établissements
-publics au 5° de l'article L. 3212-2.
+publics au 5° de l'article L. 3212-2 ainsi que les biens archéologiques mobiliers dans les conditions prévues à l'article L.
+546-6 du code du patrimoine.
 
 **Liens relatifs à cet article**
 
 _Modifié par_:
 
-  - Loi n°2009-526 du 12 mai 2009 - art. 121
+  - Ordonnance n°2017-1117 du 29 juin 2017 - art. 2
 
 _Anciens textes_:
 
