--- a/01. Partie législative/Article L1112-8 - 6361139.md
+++ b/01. Partie législative/Article L1112-8 - 6361139.md
@@ -1,14 +1,20 @@
 # Article L1112-8
 
-Le droit de préemption de la Bibliothèque nationale de France à l'égard des archives privées est exercé dans les conditions
-fixées à la sous-section 3 de la section 2 du chapitre 2 du titre Ier du livre II du code du patrimoine.
+Le droit de préemption de la Bibliothèque nationale de France à l'égard des biens culturels est exercé dans les conditions
+fixées au chapitre III du titre II du livre Ier du code du patrimoine.
+
+**Nota:**
+
+Conformément aux dispositions du I de l'article 9 de l'ordonnance n° 2017-1134 du 5 juillet 2017, ces dispositions entrent en
+vigueur à une date fixée par décret et au plus tard le 1er janvier 2018. Les demandes déposées et les procédures engagées
+avant cette date demeurent régies par les dispositions antérieures.
 
 **Liens relatifs à cet article**
 
 _Codifié par_:
 
-  - Ordonnance 2006-460 2006-04-21 JORF 22 avril 2006
+  - Ordonnance n°2006-460 du 21 avril 2006
 
-_Cite_:
+_Modifié par_:
 
-  - Code du patrimoine - art. L212-30 (V)
+  - Ordonnance n°2017-1134 du 5 juillet 2017 - art. 7
