--- a/01. Partie législative/Article L1112-9 - 6361140.md
+++ b/01. Partie législative/Article L1112-9 - 6361140.md
@@ -1,20 +1,21 @@
 # Article L1112-9
 
-L'Etat, à la demande et pour le compte des collectivités territoriales, exerce le droit de préemption dans les conditions
-fixées : 
+L'Etat, à la demande et pour le compte d'une collectivité territoriale, d'un groupement de collectivités territoriales ou
+d'un établissement public local, exerce le droit de préemption à l'égard des biens culturels dans les conditions fixées au
+chapitre III du titre II du livre Ier du code du patrimoine.
 
-1° Au chapitre 3 du titre II du livre Ier du code du patrimoine, en ce qui concerne les oeuvres d'art ; 
+**Nota:**
 
-2° A la sous-section 3 de la section 2 du chapitre 2 du titre Ier du livre II du code du patrimoine, en ce qui concerne les
-archives privées.
+Conformément aux dispositions du I de l'article 9 de l'ordonnance n° 2017-1134 du 5 juillet 2017, ces dispositions entrent en
+vigueur à une date fixée par décret et au plus tard le 1er janvier 2018. Les demandes déposées et les procédures engagées
+avant cette date demeurent régies par les dispositions antérieures.
 
 **Liens relatifs à cet article**
 
 _Codifié par_:
 
-  - Ordonnance 2006-460 2006-04-21 JORF 22 avril 2006
+  - Ordonnance n°2006-460 du 21 avril 2006
 
-_Cite_:
+_Modifié par_:
 
-  - Code du patrimoine -  Chapitre 3 : Préemption des œuvres d'art. (V)
-  - Code du patrimoine -  Sous-section 3 : Droit de préemption. (V)
+  - Ordonnance n°2017-1134 du 5 juillet 2017 - art. 7
