--- a/01. Partie législative/Article L5511-2 - 33162869.md
+++ b/01. Partie législative/Article L5511-2 - 33162869.md
@@ -153,6 +153,10 @@ L. 2331-1</td>
 Résultant de la loi n° 2010-853 du 23 juillet 2010</td>
     </tr>
     <tr>
+      <td align="left">L. 2341-2</td>
+      <td align="left">Résultant de la loi n° 2017-1837 du 30 décembre 2017 de finances pour 2018</td>
+    </tr>
+    <tr>
       <td align="left">
 
 Dans la troisième partie :</td>
@@ -175,4 +179,4 @@ L. 3111-1 et L. 3112-1 à L. 3112-3</td>
 
 _Modifié par_:
 
-  - Ordonnance n°2017-562 du 19 avril 2017 - art. 13
+  - Loi n°2017-1837 du 30 décembre 2017 - art. 154 (V)
