--- a/01. Partie législative/Article L5511-4 - 33162893.md
+++ b/01. Partie législative/Article L5511-4 - 33162893.md
@@ -128,6 +128,10 @@ L. 2331-1</td>
 Résultant de la loi n° 2010-853 du 23 juillet 2010</td>
     </tr>
     <tr>
+      <td align="left">L. 2341-2</td>
+      <td align="left">Résultant de la loi n° 2017-1837 du 30 décembre 2017 de finances pour 2018</td>
+    </tr>
+    <tr>
       <td align="left">
 
 Dans la troisième partie :</td>
@@ -238,4 +242,4 @@ L. 4111-2 à L. 4111-5, L. 4112-1 et L. 4121-1</td>
 
 _Modifié par_:
 
-  - Ordonnance n°2017-562 du 19 avril 2017 - art. 13
+  - Loi n°2017-1837 du 30 décembre 2017 - art. 154 (V)
