--- a/01. Partie législative/Article L5711-1 - 33163632.md
+++ b/01. Partie législative/Article L5711-1 - 33163632.md
@@ -173,6 +173,10 @@ L. 2331-1</td>
 Résultant de la loi n° 2010-853 du 23 juillet 2010</td>
     </tr>
     <tr>
+      <td align="left">L. 2341-2</td>
+      <td align="left">Résultant de la loi n° 2017-1837 du 30 décembre 2017 de finances pour 2018</td>
+    </tr>
+    <tr>
       <td align="left">
 
 Dans la troisième partie :</td>
@@ -199,4 +203,4 @@ Résultant de l'ordonnance n° 2017-562 du 19 avril 2017
 
 _Modifié par_:
 
-  - Ordonnance n°2017-562 du 19 avril 2017 - art. 13
+  - Loi n°2017-1837 du 30 décembre 2017 - art. 154 (V)
