--- a/01. Partie législative/Article L1112-7 - 6361138.md
+++ b/01. Partie législative/Article L1112-7 - 6361138.md
@@ -1,19 +1,20 @@
 # Article L1112-7
 
-Le droit de préemption de l'Etat est exercé dans les conditions fixées : 
+Le droit de préemption de l'Etat à l'égard des biens culturels est exercé dans les conditions fixées au chapitre III du titre
+II du livre Ier du code du patrimoine.
 
-1° Au chapitre 3 du titre II du livre Ier du code du patrimoine, en ce qui concerne les oeuvres d'art ; 
+**Nota:**
 
-2° A la sous-section 3 de la section 2 du chapitre 2 du titre Ier du livre II du code du patrimoine, en ce qui concerne les
-archives privées.
+Conformément aux dispositions du I de l'article 9 de l'ordonnance n° 2017-1134 du 5 juillet 2017, ces dispositions entrent en
+vigueur à une date fixée par décret et au plus tard le 1er janvier 2018. Les demandes déposées et les procédures engagées
+avant cette date demeurent régies par les dispositions antérieures.
 
 **Liens relatifs à cet article**
 
 _Codifié par_:
 
-  - Ordonnance 2006-460 2006-04-21 JORF 22 avril 2006
+  - Ordonnance n°2006-460 du 21 avril 2006
 
-_Cite_:
+_Modifié par_:
 
-  - Code du patrimoine - art. L123-1 (V)
-  - Code du patrimoine - art. L212-30 (V)
+  - Ordonnance n°2017-1134 du 5 juillet 2017 - art. 7
