--- a/01. Partie législative/Article L5711-2 - 33163645.md
+++ b/01. Partie législative/Article L5711-2 - 33163645.md
@@ -5,188 +5,192 @@ dispositions suivantes sont applicables à Wallis-et-Futuna au domaine privé de
 leur rédaction résultant de l'ordonnance n° 2006-460 du 21 avril 2006.
 
 <table border="1">
-    <tbody>
-      <tr>
-        <th>
+  <tbody>
+    <tr>
+      <th>
 
 DISPOSITIONS APPLICABLES</th>
-        <th>
+      <th>
 
 DANS LEUR RÉDACTION</th>
-      </tr>
-      <tr>
-        <td align="left">
+    </tr>
+    <tr>
+      <td align="left">
 
 Dans la première partie :</td>
-        <td align="left">
-      </td></tr>
-      <tr>
-        <td>
+      <td align="left">
+    </td></tr>
+    <tr>
+      <td>
 
 L. 1111-1 à L. 1111-3, L. 1112-1, L. 1112-7 à L. 1112-9, L. 1121-1 et L. 1121-2</td>
-        <td align="left">
-      </td></tr>
-      <tr>
-        <td>
+      <td align="left">
+    </td></tr>
+    <tr>
+      <td>
 
 L. 1121-3</td>
-        <td>
+      <td>
 
-Résultant de la loi n° 2014-1545 du 20 décembre 2014 </td>
-      </tr>
-      <tr>
-        <td>
+Résultant de la loi n° 2014-1545 du 20 décembre 2014</td>
+    </tr>
+    <tr>
+      <td>
 
 L. 1122-1 et L. 1124-1</td>
-        <td align="left">
-      </td></tr>
-      <tr>
-        <td>
+      <td align="left">
+    </td></tr>
+    <tr>
+      <td>
 
 L. 1125-1</td>
-        <td>
+      <td>
 
-Résultant de la loi n° 2014-640 du 20 juin 2014 </td>
-      </tr>
-      <tr>
-        <td>
+Résultant de la loi n° 2014-640 du 20 juin 2014</td>
+    </tr>
+    <tr>
+      <td>
 
 L. 1127-1, L. 1127-2 et L. 1221-1</td>
-        <td align="left">
-      </td></tr>
-      <tr>
-        <td align="left">
+      <td align="left">
+    </td></tr>
+    <tr>
+      <td align="left">
 
 Dans la deuxième partie :</td>
-        <td align="left">
-      </td></tr>
-      <tr>
-        <td>
+      <td align="left">
+    </td></tr>
+    <tr>
+      <td>
 
 L. 2211-1, L. 2221-1, L. 2222-6 à L. 2222-9</td>
-        <td align="left">
-      </td></tr>
-      <tr>
-        <td>
+      <td align="left">
+    </td></tr>
+    <tr>
+      <td>
 
 L. 2222-10</td>
-        <td>
+      <td>
 
-Résultant de la loi n° 2016-1087 du 8 août 2016 </td>
-      </tr>
-      <tr>
-        <td>
+Résultant de la loi n° 2016-1087 du 8 août 2016</td>
+    </tr>
+    <tr>
+      <td>
 
 L. 2222-12 à L. 2222-15, L. 2222-17 et L. 2222-18</td>
-        <td align="left">
-      </td></tr>
-      <tr>
-        <td>
+      <td align="left">
+    </td></tr>
+    <tr>
+      <td>
 
 L. 2222-21 et L. 2222-22</td>
-        <td>
+      <td>
 
-Résultant de la loi n° 2006-1640 du 21 décembre 2006 </td>
-      </tr>
-      <tr>
-        <td>
+Résultant de la loi n° 2006-1640 du 21 décembre 2006</td>
+    </tr>
+    <tr>
+      <td>
 
 L. 2311-1 et L. 2312-1</td>
-        <td align="left">
-      </td></tr>
-      <tr>
-        <td>
+      <td align="left">
+    </td></tr>
+    <tr>
+      <td>
 
 L. 2321-4</td>
-        <td>
+      <td>
 
-Résultant de la loi n° 2008-561 du 17 juin 2008 </td>
-      </tr>
-      <tr>
-        <td>
+Résultant de la loi n° 2008-561 du 17 juin 2008</td>
+    </tr>
+    <tr>
+      <td>
 
 L. 2321-5</td>
-        <td align="left">
-      </td></tr>
-      <tr>
-        <td>
+      <td align="left">
+    </td></tr>
+    <tr>
+      <td>
 
 L. 2331-1</td>
-        <td>
+      <td>
 
-Résultant de la loi n° 2010-853 du 23 juillet 2010 </td>
-      </tr>
-      <tr>
-        <td align="left">
+Résultant de la loi n° 2010-853 du 23 juillet 2010</td>
+    </tr>
+    <tr>
+      <td align="left">L. 2341-2</td>
+      <td align="left">Résultant de la loi n° 2017-1837 du 30 décembre 2017 de finances pour 2018</td>
+    </tr>
+    <tr>
+      <td align="left">
 
 Dans la troisième partie :</td>
-        <td align="left">
-      </td></tr>
-      <tr>
-        <td>
+      <td align="left">
+    </td></tr>
+    <tr>
+      <td>
 
 L. 3211-1</td>
-        <td>
+      <td>
 
-Résultant de la loi n° 2009-928 du 29 juillet 2009 </td>
-      </tr>
-      <tr>
-        <td>
+Résultant de la loi n° 2009-928 du 29 juillet 2009</td>
+    </tr>
+    <tr>
+      <td>
 
 L. 3211-2 à L. 3211-4, L. 3211-6, L. 3211-9, L. 3211-11</td>
-        <td align="left">
-      </td></tr>
-      <tr>
-        <td>
+      <td align="left">
+    </td></tr>
+    <tr>
+      <td>
 
 L. 3211-12</td>
-        <td>
+      <td>
 
-Résultant de la loi n° 2015-177 du 16 février 2015 </td>
-      </tr>
-      <tr>
-        <td>
+Résultant de la loi n° 2015-177 du 16 février 2015</td>
+    </tr>
+    <tr>
+      <td>
 
 L. 3211-13, L. 3211-15, L. 3211-16, L. 3211-17, L. 3211-18, L. 3211-20, L. 3211-24, L. 3212-1</td>
-        <td align="left">
-      </td></tr>
-      <tr>
-        <td>
+      <td align="left">
+    </td></tr>
+    <tr>
+      <td>
 
 L. 3212-2</td>
-        <td>Résultant de l'ordonnance n° 2017-562 du 19 avril 2017</td>
-      </tr>
-      <tr>
-        <td>
+      <td>Résultant de l'ordonnance n° 2017-562 du 19 avril 2017</td>
+    </tr>
+    <tr>
+      <td>
 
 L. 3221-4 à L. 3221-7</td>
-        <td align="left">
-      </td></tr>
-      <tr>
-        <td>
+      <td align="left">
+    </td></tr>
+    <tr>
+      <td>
 
 L. 3231-1</td>
-        <td>
+      <td>
 
-Résultant de la loi n° 2009-526 du 12 mai 2009 </td>
-      </tr>
-      <tr>
-        <td align="left">
+Résultant de la loi n° 2009-526 du 12 mai 2009</td>
+    </tr>
+    <tr>
+      <td align="left">
 
 Dans la quatrième partie :</td>
-        <td align="left">
-      </td></tr>
-      <tr>
-        <td>
+      <td align="left">
+    </td></tr>
+    <tr>
+      <td>
 
 L. 4112-1 et L. 4121-1</td>
-        <td align="left">
-      </td></tr>
-    </tbody>
-  </table>
+      <td align="left">
+    </td></tr>
+  </tbody>
+</table>
 
 **Liens relatifs à cet article**
 
 _Modifié par_:
 
-  - Ordonnance n°2017-562 du 19 avril 2017 - art. 13
+  - Loi n°2017-1837 du 30 décembre 2017 - art. 154 (V)
