--- a/01. Partie législative/Article L3211-1 - 6361416.md
+++ b/01. Partie législative/Article L3211-1 - 6361416.md
@@ -4,10 +4,14 @@ Lorsqu'ils ne sont plus utilisés par un service civil ou militaire de l'Etat ou
 immeubles du domaine privé de l'Etat peuvent être vendus dans les conditions fixées par décret en Conseil d'Etat. 
 
 Lorsque la cession de ces immeubles implique l'application des mesures prévues à l'article L. 541-2 du code de
-l'environnement ou l'élimination des pollutions pyrotechniques, l'Etat peut subordonner la cession à l'exécution, dans le
-cadre de la réglementation applicable, par l'acquéreur, de ces mesures ou de ces travaux, le coût de la dépollution
-s'imputant sur le prix de vente. Dans cette hypothèse, le coût de la dépollution peut être fixé par un organisme expert
-indépendant choisi d'un commun accord par l'Etat et l'acquéreur.
+l'environnement ou, en fonction de l'usage auquel le terrain est destiné, la réalisation d'une opération de dépollution
+pyrotechnique, l'Etat peut subordonner la cession à l'exécution, par l'acquéreur, de ces mesures ou de ces travaux. Dans ce
+cas, les opérations de dépollution pyrotechnique sont exécutées conformément aux règles de sécurité définies par voie
+réglementaire. Le coût réel de ces mesures ou travaux s'impute sur le prix de vente à concurrence du montant fixé à ce titre
+dans l'acte de cession, déterminé par un expert indépendant choisi d'un commun accord par l'Etat et l'acquéreur. Cette
+expertise est contradictoire. Le diagnostic de pollution, le rapport d'expertise et le relevé des mesures de dépollution à
+réaliser sont annexés à l'acte de vente. Une fois la cession intervenue, l'acquéreur supporte les dépenses liées aux mesures
+supplémentaires de dépollution nécessaires à l'utilisation future de l'immeuble cédé.
 
 **Liens relatifs à cet article**
 
@@ -15,7 +19,7 @@ _Cité par_:
 
   - Décret n°76-225 du 4 mars 1976 - art. 4 (VT)
   - Décret n°76-225 du 4 mars 1976 - art. 4-1 (VT)
-  - Loi n°86-1290 du 23 décembre 1986 - art. 73 (M)
+  - Loi n°86-1290 du 23 décembre 1986 - art. 73 (V)
   - Décret n°2017-867 du 9 mai 2017 - art. (V)
   - Code de la sécurité intérieure - art. R733-5 (V)
   - Code de la sécurité intérieure - art. R733-9 (V)
@@ -24,7 +28,7 @@ _Cité par_:
 
 _Modifié par_:
 
-  - Loi n°2009-928 du 29 juillet 2009 - art. 8
+  - Loi n°2018-607 du 13 juillet 2018 - art. 46
 
 _Anciens textes_:
 
