--- a/01. Partie législative/Article L5511-4 - 33162893.md
+++ b/01. Partie législative/Article L5511-4 - 33162893.md
@@ -141,9 +141,8 @@ Dans la troisième partie :</td>
       <td>
 
 L. 3211-1</td>
-      <td>
-
-Résultant de la loi n° 2009-928 du 29 juillet 2009</td>
+      <td>Résultant de la loi n° 2018-607 du 13 juillet 2018 relative à la programmation militaire pour les années 2019 à
+2025 et portant diverses dispositions intéressant la défense </td>
     </tr>
     <tr>
       <td>
@@ -242,4 +241,4 @@ L. 4111-2 à L. 4111-5, L. 4112-1 et L. 4121-1</td>
 
 _Modifié par_:
 
-  - Loi n°2017-1837 du 30 décembre 2017 - art. 154 (V)
+  - Loi n°2018-607 du 13 juillet 2018 - art. 64 (V)
