--- a/01. Partie législative/Article L3211-7 - 6361425.md
+++ b/01. Partie législative/Article L3211-7 - 6361425.md
@@ -42,7 +42,10 @@ et de l'habitation et aux sociétés d'économie mixte mentionnées à l'article
 terrains destinés à des programmes de logements faisant l'objet de conventions régies par le chapitre III du titre V du livre
 III dudit code.
 
-II bis. – (Abrogé)
+II bis. - Jusqu'au 31 décembre 2025, la décote prévue aux I et II n'est applicable aux cessions de terrains occupés par le
+ministère des armées et situés dans des zones tendues, en particulier l'Île-de-France et la région Provence-Alpes-Côte
+d'Azur, que lorsque ces terrains, bâtis ou non, sont destinés à la réalisation de programmes de logements sociaux réservés au
+maximum aux trois quarts aux agents de ce ministère, à la demande de ce dernier.
 
 III. – L'avantage financier résultant de la décote est exclusivement et en totalité répercuté sur le prix de revient des
 logements locatifs sociaux.
@@ -188,7 +191,7 @@ IX. – Un décret en Conseil d'Etat précise les conditions d'application des I
 _Cite_:
 
   - Loi n°2000-614 du 5 juillet 2000 - art. 1
-  - Loi n°2006-1771 du 30 décembre 2006 - art. 141 (V)
+  - Loi n°2006-1771 du 30 décembre 2006 - art. 141
   - Code de l'action sociale et des familles - art. L345-1
   - Code de l'urbanisme - art. L300-1
   - Code de la construction et de l'habitation. - art. L351-2
@@ -238,8 +241,7 @@ _Cité par_:
 
 _Modifié par_:
 
-  - Loi n°2017-256 du 28 février 2017 - art. 14
-  - Loi n°2017-257 du 28 février 2017 - art. 50
+  - Loi n°2018-607 du 13 juillet 2018 - art. 47
 
 _Anciens textes_:
 
